--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -22,8 +22,8 @@ allow 104.192.1.138;
 allow 104.192.3.74;
 allow 104.219.236.100;
 allow 104.219.236.101;
-allow 104.219.236.93;
 allow 104.237.158.32;
+allow 104.244.72.115;
 allow 104.244.72.132;
 allow 104.244.73.136;
 allow 104.244.73.190;
@@ -38,6 +38,7 @@ allow 104.244.77.79;
 allow 104.244.77.80;
 allow 104.244.78.162;
 allow 104.244.78.233;
+allow 104.244.79.178;
 allow 104.244.79.44;
 allow 104.244.79.50;
 allow 104.244.79.61;
@@ -115,15 +116,16 @@ allow 118.163.74.160;
 allow 124.217.247.210;
 allow 125.212.241.131;
 allow 128.127.180.156;
-allow 128.140.68.226;
 allow 128.31.0.13;
 allow 130.193.10.21;
 allow 130.193.15.186;
 allow 130.193.15.79;
+allow 130.204.161.3;
 allow 135.125.205.25;
 allow 135.125.55.237;
 allow 136.244.111.163;
-allow 138.201.38.46;
+allow 138.128.222.68;
+allow 138.201.203.206;
 allow 138.59.18.110;
 allow 139.99.172.11;
 allow 141.239.149.94;
@@ -152,7 +154,6 @@ allow 151.80.148.159;
 allow 152.89.233.169;
 allow 154.16.116.61;
 allow 156.146.63.135;
-allow 157.143.80.38;
 allow 158.220.92.203;
 allow 160.119.249.240;
 allow 162.241.121.139;
@@ -195,14 +196,13 @@ allow 173.249.57.253;
 allow 173.255.255.215;
 allow 175.214.127.6;
 allow 176.118.193.33;
-allow 176.121.81.51;
 allow 176.126.253.190;
 allow 176.58.100.98;
 allow 176.58.121.177;
 allow 178.170.37.11;
-allow 178.17.170.184;
 allow 178.17.170.23;
 allow 178.17.171.102;
+allow 178.17.174.14;
 allow 178.17.174.164;
 allow 178.17.174.198;
 allow 178.175.131.141;
@@ -263,7 +263,6 @@ allow 185.14.97.37;
 allow 185.153.197.227;
 allow 185.154.110.142;
 allow 185.154.110.17;
-allow 185.163.46.4;
 allow 185.165.169.239;
 allow 185.165.171.84;
 allow 185.165.190.111;
@@ -484,6 +483,7 @@ allow 185.220.103.6;
 allow 185.220.103.7;
 allow 185.220.103.8;
 allow 185.220.103.9;
+allow 185.225.226.77;
 allow 185.225.69.203;
 allow 185.225.69.232;
 allow 185.227.134.106;
@@ -546,12 +546,11 @@ allow 188.214.104.21;
 allow 188.68.41.191;
 allow 188.68.49.235;
 allow 188.68.52.231;
-allow 189.147.192.132;
 allow 190.103.179.98;
 allow 190.120.229.98;
 allow 190.211.254.97;
+allow 192.195.80.10;
 allow 192.210.255.181;
-allow 192.227.175.188;
 allow 192.42.116.13;
 allow 192.42.116.14;
 allow 192.42.116.15;
@@ -631,7 +630,6 @@ allow 193.189.100.205;
 allow 193.189.100.206;
 allow 193.218.118.133;
 allow 193.218.118.182;
-allow 193.218.118.188;
 allow 193.218.118.91;
 allow 193.233.133.109;
 allow 193.233.233.124;
@@ -639,6 +637,7 @@ allow 193.239.232.102;
 allow 193.239.232.228;
 allow 193.26.115.43;
 allow 193.26.115.61;
+allow 193.35.18.105;
 allow 193.35.18.120;
 allow 193.35.18.49;
 allow 193.35.18.77;
@@ -656,6 +655,7 @@ allow 194.26.192.64;
 allow 194.26.192.77;
 allow 194.28.112.157;
 allow 194.48.250.55;
+allow 194.5.249.106;
 allow 195.160.220.104;
 allow 195.176.3.19;
 allow 195.176.3.20;
@@ -664,7 +664,7 @@ allow 195.176.3.24;
 allow 195.80.151.30;
 allow 195.88.74.206;
 allow 198.144.178.163;
-allow 198.167.193.155;
+allow 198.167.193.244;
 allow 198.23.133.132;
 allow 198.251.84.163;
 allow 198.251.84.237;
@@ -794,7 +794,6 @@ allow 2001:67c:6ec:203:218:33ff:fe44:5524;
 allow 2001:67c:6ec:203:218:33ff:fe44:5525;
 allow 2001:67c:6ec:203:218:33ff:fe44:5526;
 allow 2001:67c:6ec:203:218:33ff:fe44:5527;
-allow 2001:8e0:3c0d:fd01:7285:c2ff:fe71:5db7;
 allow 2001:910:1400:107::2;
 allow 2001:b030:2422::7234;
 allow 2001:bc8:1201:608:46a8:42ff:fe3d:2743;
@@ -803,6 +802,7 @@ allow 2001:bc8:634:2177::1;
 allow 2001:bc8:700:9212::1;
 allow 2001:bf0:666::666;
 allow 2001:df7:7e80:100:9f2b:1d15:c713:52ad;
+allow 201.137.254.136;
 allow 202.182.99.129;
 allow 202.61.226.98;
 allow 202.69.76.36;
@@ -821,6 +821,7 @@ allow 205.185.124.176;
 allow 205.185.124.193;
 allow 208.109.215.188;
 allow 208.109.36.224;
+allow 209.133.210.2;
 allow 209.141.46.203;
 allow 209.141.50.178;
 allow 209.141.51.180;
@@ -833,6 +834,7 @@ allow 212.21.66.6;
 allow 212.69.167.80;
 allow 212.73.134.204;
 allow 212.95.50.77;
+allow 213.136.84.104;
 allow 213.232.235.83;
 allow 213.252.140.118;
 allow 213.95.149.22;
@@ -905,7 +907,6 @@ allow 2.58.95.59;
 allow 2600:3c00:e000:4ee::3;
 allow 2600:3c00::f03c:91ff:fe96:1cd9;
 allow 2600:3c03:e000:fa::2;
-allow 2600:3c03::f03c:94ff:fecf:d2b5;
 allow 2602:2e5::104;
 allow 2602:fbf6:11:27::3;
 allow 2602:fc24:11:26c3::1;
@@ -1007,6 +1008,7 @@ allow 2605:6400:30:f7ca::2;
 allow 2605:6400:30:f7fa:c230:6fe8:a09a:5836;
 allow 2605:6400:30:f805:1e96:b223:fbe5:cfac;
 allow 2605:6400:30:f82f:7de1:3de3:8947:bc6a;
+allow 2605:6400:30:f858:2704:73e1:7085:12ef;
 allow 2605:6400:30:f8b5:620c:dc25:c624:aafd;
 allow 2605:6400:30:f8d5::1;
 allow 2605:6400:30:f8da:2b2:a293:30ad:506d;
@@ -1027,6 +1029,7 @@ allow 2607:5300:61:785::;
 allow 2607:5300:61:785:1:2:3:4;
 allow 2607:b500:408:3100::1;
 allow 2607:f530:8002::19;
+allow 2607:f598:b310:221:0:a:0:1;
 allow 2620:59:a000:9666:216:3eff:fe7d:dae8;
 allow 2620:95:4007::111;
 allow 27.255.75.198;
@@ -1044,13 +1047,13 @@ allow 2a00:1b88:4::2;
 allow 2a00:1b88:4::4;
 allow 2a00:1dc0:caff:138::94d2;
 allow 2a00:1dc0:caff:15::45dc;
-allow 2a00:1dc0:caff:178::982b;
 allow 2a00:1dc0:caff:73::d735;
+allow 2a00:1dc0:caff:8b::24bd;
 allow 2a00:6d42:1242:1c00::1cd;
 allow 2a00:99a0:0:1000::2;
 allow 2a00:c70:2017:1::169;
 allow 2a01:4262:1ab:ffff::133;
-allow 2a01:4f8:c2c:4171::1;
+allow 2a01:5e0:36:cf2a::1;
 allow 2a01:6340:2:501::10;
 allow 2a01:6340:2:501::20;
 allow 2a01:7e00::f03c:91ff:fe56:2656;
@@ -1059,6 +1062,7 @@ allow 2a01:7e00::f03c:93ff:fef8:bd9b;
 allow 2a01:7e01::f03c:93ff:fef8:bd60;
 allow 2a02:13f0:8100:6:205:ce4a:e2d2:1;
 allow 2a02:13f0:8100:6:386:2b8f:b0fd:1;
+allow 2a02:13f0:8100:6:6bc:499d:b353:1;
 allow 2a02:16d0:0:5::1;
 allow 2a02:2970:1001::4b;
 allow 2a02:418:6017::147;
@@ -1158,6 +1162,9 @@ allow 2a05:541:110:20::1;
 allow 2a05:541:110:3e::1;
 allow 2a05:541:112:31::1;
 allow 2a05:541:122:49::1;
+allow 2a05:b0c7:67c6::1;
+allow 2a05:b0c7:6949::1;
+allow 2a05:b0c7:6bd4::1;
 allow 2a06:1280:bee1:2::ee12:230;
 allow 2a06:1700:0:12::1;
 allow 2a06:1700:0:12::2;
@@ -1394,7 +1401,6 @@ allow 2a0f:df00:0:255::205;
 allow 2a0f:df00:0:255::206;
 allow 2a0f:e586:f:f::133;
 allow 2a0f:e586:f:f::182;
-allow 2a0f:e586:f:f::188;
 allow 2a10:8a40:f313::29;
 allow 2a10:c800:1:9cc6::1;
 allow 2a11:6100:0:22:a236:9fff:fe9e:36ea;
@@ -1418,7 +1424,9 @@ allow 2a12:8641:3:24::;
 allow 2a12:a800:2:1:45:138:16:203;
 allow 31.129.22.65;
 allow 31.13.189.118;
+allow 31.220.87.46;
 allow 31.220.98.139;
+allow 31.42.185.227;
 allow 35.0.127.52;
 allow 37.1.201.144;
 allow 37.120.166.23;
@@ -1428,11 +1436,9 @@ allow 37.228.129.131;
 allow 37.228.129.24;
 allow 37.228.129.63;
 allow 37.48.120.196;
-allow 37.48.120.64;
 allow 37.48.70.156;
 allow 38.242.239.62;
 allow 38.97.116.244;
-allow 44.214.32.213;
 allow 45.128.232.102;
 allow 45.128.232.170;
 allow 45.132.246.245;
@@ -1478,7 +1484,6 @@ allow 45.66.35.10;
 allow 45.66.35.20;
 allow 45.66.35.21;
 allow 45.66.35.35;
-allow 45.79.129.209;
 allow 45.79.177.21;
 allow 45.79.50.161;
 allow 45.80.158.205;
@@ -1503,10 +1508,12 @@ allow 45.95.169.255;
 allow 45.95.169.99;
 allow 46.166.139.111;
 allow 46.182.21.248;
+allow 46.226.164.14;
 allow 46.232.251.191;
 allow 46.234.47.105;
 allow 46.38.255.27;
 allow 47.243.74.136;
+allow 47.245.106.151;
 allow 50.3.182.133;
 allow 50.3.182.156;
 allow 51.15.227.109;
@@ -1543,6 +1550,7 @@ allow 5.255.115.58;
 allow 5.255.117.56;
 allow 5.255.118.104;
 allow 5.255.118.244;
+allow 5.255.123.164;
 allow 5.255.124.150;
 allow 5.255.125.153;
 allow 5.255.125.196;
@@ -1556,6 +1564,7 @@ allow 5.255.99.108;
 allow 5.255.99.124;
 allow 5.255.99.147;
 allow 5.255.99.5;
+allow 52.6.66.24;
 allow 5.2.67.226;
 allow 5.2.79.179;
 allow 5.2.79.190;
@@ -1570,8 +1579,10 @@ allow 54.36.101.21;
 allow 5.45.102.93;
 allow 5.45.104.176;
 allow 5.45.98.162;
+allow 5.79.66.19;
 allow 62.133.45.2;
 allow 62.171.137.169;
+allow 62.182.82.143;
 allow 62.182.84.146;
 allow 64.5.123.66;
 allow 66.146.193.33;
@@ -1592,7 +1603,6 @@ allow 77.220.196.253;
 allow 77.232.143.243;
 allow 77.232.143.248;
 allow 77.232.143.255;
-allow 77.48.28.193;
 allow 77.48.28.204;
 allow 77.48.28.236;
 allow 77.48.28.237;
@@ -1605,7 +1615,6 @@ allow 78.142.18.219;
 allow 79.124.8.241;
 allow 79.137.195.103;
 allow 79.137.198.213;
-allow 79.137.202.92;
 allow 80.210.78.252;
 allow 80.241.60.207;
 allow 80.67.167.81;
@@ -1614,10 +1623,9 @@ allow 80.82.78.14;
 allow 81.16.33.42;
 allow 81.17.28.95;
 allow 81.19.137.127;
+allow 82.118.242.158;
 allow 82.118.242.16;
-allow 82.147.85.201;
 allow 82.153.138.120;
-allow 82.153.138.152;
 allow 82.153.138.48;
 allow 82.153.138.79;
 allow 82.197.182.161;
@@ -1631,8 +1639,12 @@ allow 83.97.20.77;
 allow 84.16.224.227;
 allow 84.211.225.54;
 allow 84.239.46.144;
+allow 84.54.51.61;
+allow 84.54.51.68;
+allow 84.54.51.69;
 allow 85.204.116.139;
 allow 85.204.116.211;
+allow 85.204.116.88;
 allow 85.209.176.103;
 allow 85.215.76.62;
 allow 85.235.145.205;
@@ -1646,7 +1658,6 @@ allow 87.118.122.30;
 allow 87.118.122.51;
 allow 87.120.254.132;
 allow 87.120.254.48;
-allow 88.119.167.201;
 allow 88.209.197.8;
 allow 88.80.20.86;
 allow 89.147.108.209;
@@ -1699,11 +1710,13 @@ allow 93.95.228.205;
 allow 93.95.230.165;
 allow 93.95.230.54;
 allow 93.99.104.128;
+allow 93.99.104.18;
 allow 94.102.51.15;
 allow 94.103.124.184;
 allow 94.140.115.63;
 allow 94.142.241.194;
 allow 94.142.244.16;
+allow 94.158.246.240;
 allow 94.16.112.22;
 allow 94.16.116.81;
 allow 94.16.121.226;
@@ -1720,12 +1733,14 @@ allow 94.32.66.15;
 allow 94.75.225.81;
 allow 95.111.238.0;
 allow 95.128.43.164;
+allow 95.141.35.21;
 allow 95.142.161.63;
 allow 95.143.193.125;
+allow 95.154.196.24;
 allow 95.164.46.204;
-allow 95.168.173.143;
 allow 95.211.210.103;
 allow 95.211.244.28;
 allow 95.211.7.148;
 allow 96.27.198.133;
+allow 96.42.26.63;
 allow 96.66.15.152;
