Update lists at 20240222-2100

--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -138,6 +138,7 @@ allow 144.172.118.41;
 allow 144.172.118.57;
 allow 144.172.118.62;
 allow 144.172.73.11;
+allow 144.172.73.13;
 allow 144.172.73.6;
 allow 144.217.80.80;
 allow 144.24.197.112;
@@ -154,7 +155,6 @@ allow 151.80.148.159;
 allow 152.89.233.169;
 allow 154.16.116.61;
 allow 156.146.63.135;
-allow 158.220.92.203;
 allow 160.119.249.240;
 allow 162.241.121.139;
 allow 162.247.72.192;
@@ -210,6 +210,7 @@ allow 178.175.142.26;
 allow 178.175.148.209;
 allow 178.20.55.16;
 allow 178.20.55.182;
+allow 178.218.144.18;
 allow 178.218.144.51;
 allow 178.218.144.99;
 allow 178.236.237.23;
@@ -228,7 +229,6 @@ allow 179.43.159.78;
 allow 179.43.182.232;
 allow 179.43.182.58;
 allow 180.150.226.99;
-allow 18.204.162.185;
 allow 184.105.48.40;
 allow 184.75.221.3;
 allow 185.100.85.132;
@@ -247,6 +247,7 @@ allow 185.100.87.41;
 allow 185.10.16.41;
 allow 185.106.102.102;
 allow 185.106.94.195;
+allow 185.107.70.56;
 allow 185.113.128.30;
 allow 185.129.62.62;
 allow 185.129.62.63;
@@ -415,11 +416,13 @@ allow 185.220.101.37;
 allow 185.220.101.38;
 allow 185.220.101.39;
 allow 185.220.101.4;
+allow 185.220.101.40;
 allow 185.220.101.41;
 allow 185.220.101.42;
 allow 185.220.101.43;
 allow 185.220.101.44;
 allow 185.220.101.45;
+allow 185.220.101.46;
 allow 185.220.101.47;
 allow 185.220.101.48;
 allow 185.220.101.49;
@@ -534,6 +537,7 @@ allow 185.7.33.146;
 allow 185.82.127.128;
 allow 185.82.219.109;
 allow 185.84.31.254;
+allow 185.86.148.90;
 allow 188.165.200.97;
 allow 188.166.92.179;
 allow 188.172.229.15;
@@ -613,7 +617,6 @@ allow 193.168.141.245;
 allow 193.189.100.194;
 allow 193.189.100.195;
 allow 193.189.100.196;
-allow 193.189.100.197;
 allow 193.189.100.198;
 allow 193.189.100.199;
 allow 193.189.100.200;
@@ -642,7 +645,6 @@ allow 193.35.18.96;
 allow 193.35.18.98;
 allow 194.15.112.133;
 allow 194.15.113.118;
-allow 194.15.115.212;
 allow 194.163.157.49;
 allow 194.195.120.132;
 allow 194.26.192.64;
@@ -1061,6 +1063,7 @@ allow 2a02:16d0:0:5::1;
 allow 2a02:2970:1001::4b;
 allow 2a02:418:6017::147;
 allow 2a02:418:6017::148;
+allow 2a02:7aa0:1619::ba45:e7f2;
 allow 2a02:7aa0:5000::1ec;
 allow 2a02:898:218::1;
 allow 2a02:898:218::2;
@@ -1289,11 +1292,13 @@ allow 2a0b:f4c2:2::37;
 allow 2a0b:f4c2:2::38;
 allow 2a0b:f4c2:2::39;
 allow 2a0b:f4c2::24;
+allow 2a0b:f4c2:2::40;
 allow 2a0b:f4c2:2::41;
 allow 2a0b:f4c2:2::42;
 allow 2a0b:f4c2:2::43;
 allow 2a0b:f4c2:2::44;
 allow 2a0b:f4c2:2::45;
+allow 2a0b:f4c2:2::46;
 allow 2a0b:f4c2:2::47;
 allow 2a0b:f4c2:2::48;
 allow 2a0b:f4c2:2::49;
@@ -1380,7 +1385,6 @@ allow 2a0f:93c1:26:1f2::9ce5;
 allow 2a0f:df00:0:255::194;
 allow 2a0f:df00:0:255::195;
 allow 2a0f:df00:0:255::196;
-allow 2a0f:df00:0:255::197;
 allow 2a0f:df00:0:255::198;
 allow 2a0f:df00:0:255::199;
 allow 2a0f:df00:0:255::200;
@@ -1412,6 +1416,7 @@ allow 2a12:5940:d0e2::2;
 allow 2a12:5940:f0a8::2;
 allow 2a12:8641:3:12::;
 allow 2a12:8641:3:24::;
+allow 2a12:8641:3:38::;
 allow 2a12:a800:2:1:45:138:16:203;
 allow 31.129.22.65;
 allow 31.13.189.118;
@@ -1499,6 +1504,11 @@ allow 45.95.169.255;
 allow 45.95.169.99;
 allow 46.166.139.111;
 allow 46.182.21.248;
+allow 46.183.222.180;
+allow 46.183.222.181;
+allow 46.183.222.183;
+allow 46.183.222.184;
+allow 46.183.222.185;
 allow 46.195.68.19;
 allow 46.226.164.14;
 allow 46.232.251.191;
@@ -1529,6 +1539,7 @@ allow 51.89.138.51;
 allow 51.89.153.112;
 allow 5.196.8.113;
 allow 5.196.95.34;
+allow 52.0.165.111;
 allow 5.255.100.219;
 allow 5.255.101.10;
 allow 5.255.101.131;
@@ -1587,7 +1598,6 @@ allow 72.167.47.69;
 allow 74.207.248.172;
 allow 74.208.106.128;
 allow 74.82.47.194;
-allow 75.119.142.240;
 allow 77.105.146.42;
 allow 77.220.196.253;
 allow 77.232.143.243;
@@ -1712,6 +1722,7 @@ allow 94.16.116.81;
 allow 94.16.121.226;
 allow 94.16.121.91;
 allow 94.177.106.37;
+allow 94.177.106.46;
 allow 94.177.106.55;
 allow 94.177.106.59;
 allow 94.228.163.25;
