--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -273,6 +273,7 @@ deny 2a02:16d0:0:5::1;
 deny 2a02:2970:1001::4b;
 deny 2a02:418:6017::147;
 deny 2a02:418:6017::148;
+deny 2a02:7aa0:1619::ba45:e7f2;
 deny 2a02:7aa0:5000::1ec;
 deny 2a02:898:218::1;
 deny 2a02:898:218::2;
@@ -501,11 +502,13 @@ deny 2a0b:f4c2:2::37;
 deny 2a0b:f4c2:2::38;
 deny 2a0b:f4c2:2::39;
 deny 2a0b:f4c2::24;
+deny 2a0b:f4c2:2::40;
 deny 2a0b:f4c2:2::41;
 deny 2a0b:f4c2:2::42;
 deny 2a0b:f4c2:2::43;
 deny 2a0b:f4c2:2::44;
 deny 2a0b:f4c2:2::45;
+deny 2a0b:f4c2:2::46;
 deny 2a0b:f4c2:2::47;
 deny 2a0b:f4c2:2::48;
 deny 2a0b:f4c2:2::49;
@@ -592,7 +595,6 @@ deny 2a0f:93c1:26:1f2::9ce5;
 deny 2a0f:df00:0:255::194;
 deny 2a0f:df00:0:255::195;
 deny 2a0f:df00:0:255::196;
-deny 2a0f:df00:0:255::197;
 deny 2a0f:df00:0:255::198;
 deny 2a0f:df00:0:255::199;
 deny 2a0f:df00:0:255::200;
@@ -624,4 +626,5 @@ deny 2a12:5940:d0e2::2;
 deny 2a12:5940:f0a8::2;
 deny 2a12:8641:3:12::;
 deny 2a12:8641:3:24::;
+deny 2a12:8641:3:38::;
 deny 2a12:a800:2:1:45:138:16:203;
