--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -138,6 +138,7 @@ set_real_ip_from 144.172.118.41;
 set_real_ip_from 144.172.118.57;
 set_real_ip_from 144.172.118.62;
 set_real_ip_from 144.172.73.11;
+set_real_ip_from 144.172.73.13;
 set_real_ip_from 144.172.73.6;
 set_real_ip_from 144.217.80.80;
 set_real_ip_from 144.24.197.112;
@@ -154,7 +155,6 @@ set_real_ip_from 151.80.148.159;
 set_real_ip_from 152.89.233.169;
 set_real_ip_from 154.16.116.61;
 set_real_ip_from 156.146.63.135;
-set_real_ip_from 158.220.92.203;
 set_real_ip_from 160.119.249.240;
 set_real_ip_from 162.241.121.139;
 set_real_ip_from 162.247.72.192;
@@ -210,6 +210,7 @@ set_real_ip_from 178.175.142.26;
 set_real_ip_from 178.175.148.209;
 set_real_ip_from 178.20.55.16;
 set_real_ip_from 178.20.55.182;
+set_real_ip_from 178.218.144.18;
 set_real_ip_from 178.218.144.51;
 set_real_ip_from 178.218.144.99;
 set_real_ip_from 178.236.237.23;
@@ -228,7 +229,6 @@ set_real_ip_from 179.43.159.78;
 set_real_ip_from 179.43.182.232;
 set_real_ip_from 179.43.182.58;
 set_real_ip_from 180.150.226.99;
-set_real_ip_from 18.204.162.185;
 set_real_ip_from 184.105.48.40;
 set_real_ip_from 184.75.221.3;
 set_real_ip_from 185.100.85.132;
@@ -247,6 +247,7 @@ set_real_ip_from 185.100.87.41;
 set_real_ip_from 185.10.16.41;
 set_real_ip_from 185.106.102.102;
 set_real_ip_from 185.106.94.195;
+set_real_ip_from 185.107.70.56;
 set_real_ip_from 185.113.128.30;
 set_real_ip_from 185.129.62.62;
 set_real_ip_from 185.129.62.63;
@@ -415,11 +416,13 @@ set_real_ip_from 185.220.101.37;
 set_real_ip_from 185.220.101.38;
 set_real_ip_from 185.220.101.39;
 set_real_ip_from 185.220.101.4;
+set_real_ip_from 185.220.101.40;
 set_real_ip_from 185.220.101.41;
 set_real_ip_from 185.220.101.42;
 set_real_ip_from 185.220.101.43;
 set_real_ip_from 185.220.101.44;
 set_real_ip_from 185.220.101.45;
+set_real_ip_from 185.220.101.46;
 set_real_ip_from 185.220.101.47;
 set_real_ip_from 185.220.101.48;
 set_real_ip_from 185.220.101.49;
@@ -534,6 +537,7 @@ set_real_ip_from 185.7.33.146;
 set_real_ip_from 185.82.127.128;
 set_real_ip_from 185.82.219.109;
 set_real_ip_from 185.84.31.254;
+set_real_ip_from 185.86.148.90;
 set_real_ip_from 188.165.200.97;
 set_real_ip_from 188.166.92.179;
 set_real_ip_from 188.172.229.15;
@@ -613,7 +617,6 @@ set_real_ip_from 193.168.141.245;
 set_real_ip_from 193.189.100.194;
 set_real_ip_from 193.189.100.195;
 set_real_ip_from 193.189.100.196;
-set_real_ip_from 193.189.100.197;
 set_real_ip_from 193.189.100.198;
 set_real_ip_from 193.189.100.199;
 set_real_ip_from 193.189.100.200;
@@ -642,7 +645,6 @@ set_real_ip_from 193.35.18.96;
 set_real_ip_from 193.35.18.98;
 set_real_ip_from 194.15.112.133;
 set_real_ip_from 194.15.113.118;
-set_real_ip_from 194.15.115.212;
 set_real_ip_from 194.163.157.49;
 set_real_ip_from 194.195.120.132;
 set_real_ip_from 194.26.192.64;
@@ -1061,6 +1063,7 @@ set_real_ip_from 2a02:16d0:0:5::1;
 set_real_ip_from 2a02:2970:1001::4b;
 set_real_ip_from 2a02:418:6017::147;
 set_real_ip_from 2a02:418:6017::148;
+set_real_ip_from 2a02:7aa0:1619::ba45:e7f2;
 set_real_ip_from 2a02:7aa0:5000::1ec;
 set_real_ip_from 2a02:898:218::1;
 set_real_ip_from 2a02:898:218::2;
@@ -1289,11 +1292,13 @@ set_real_ip_from 2a0b:f4c2:2::37;
 set_real_ip_from 2a0b:f4c2:2::38;
 set_real_ip_from 2a0b:f4c2:2::39;
 set_real_ip_from 2a0b:f4c2::24;
+set_real_ip_from 2a0b:f4c2:2::40;
 set_real_ip_from 2a0b:f4c2:2::41;
 set_real_ip_from 2a0b:f4c2:2::42;
 set_real_ip_from 2a0b:f4c2:2::43;
 set_real_ip_from 2a0b:f4c2:2::44;
 set_real_ip_from 2a0b:f4c2:2::45;
+set_real_ip_from 2a0b:f4c2:2::46;
 set_real_ip_from 2a0b:f4c2:2::47;
 set_real_ip_from 2a0b:f4c2:2::48;
 set_real_ip_from 2a0b:f4c2:2::49;
@@ -1380,7 +1385,6 @@ set_real_ip_from 2a0f:93c1:26:1f2::9ce5;
 set_real_ip_from 2a0f:df00:0:255::194;
 set_real_ip_from 2a0f:df00:0:255::195;
 set_real_ip_from 2a0f:df00:0:255::196;
-set_real_ip_from 2a0f:df00:0:255::197;
 set_real_ip_from 2a0f:df00:0:255::198;
 set_real_ip_from 2a0f:df00:0:255::199;
 set_real_ip_from 2a0f:df00:0:255::200;
@@ -1412,6 +1416,7 @@ set_real_ip_from 2a12:5940:d0e2::2;
 set_real_ip_from 2a12:5940:f0a8::2;
 set_real_ip_from 2a12:8641:3:12::;
 set_real_ip_from 2a12:8641:3:24::;
+set_real_ip_from 2a12:8641:3:38::;
 set_real_ip_from 2a12:a800:2:1:45:138:16:203;
 set_real_ip_from 31.129.22.65;
 set_real_ip_from 31.13.189.118;
@@ -1499,6 +1504,11 @@ set_real_ip_from 45.95.169.255;
 set_real_ip_from 45.95.169.99;
 set_real_ip_from 46.166.139.111;
 set_real_ip_from 46.182.21.248;
+set_real_ip_from 46.183.222.180;
+set_real_ip_from 46.183.222.181;
+set_real_ip_from 46.183.222.183;
+set_real_ip_from 46.183.222.184;
+set_real_ip_from 46.183.222.185;
 set_real_ip_from 46.195.68.19;
 set_real_ip_from 46.226.164.14;
 set_real_ip_from 46.232.251.191;
@@ -1529,6 +1539,7 @@ set_real_ip_from 51.89.138.51;
 set_real_ip_from 51.89.153.112;
 set_real_ip_from 5.196.8.113;
 set_real_ip_from 5.196.95.34;
+set_real_ip_from 52.0.165.111;
 set_real_ip_from 5.255.100.219;
 set_real_ip_from 5.255.101.10;
 set_real_ip_from 5.255.101.131;
@@ -1587,7 +1598,6 @@ set_real_ip_from 72.167.47.69;
 set_real_ip_from 74.207.248.172;
 set_real_ip_from 74.208.106.128;
 set_real_ip_from 74.82.47.194;
-set_real_ip_from 75.119.142.240;
 set_real_ip_from 77.105.146.42;
 set_real_ip_from 77.220.196.253;
 set_real_ip_from 77.232.143.243;
@@ -1712,6 +1722,7 @@ set_real_ip_from 94.16.116.81;
 set_real_ip_from 94.16.121.226;
 set_real_ip_from 94.16.121.91;
 set_real_ip_from 94.177.106.37;
+set_real_ip_from 94.177.106.46;
 set_real_ip_from 94.177.106.55;
 set_real_ip_from 94.177.106.59;
 set_real_ip_from 94.228.163.25;
