--- a/set_real_ip_from-tor_ips_v6.conf
+++ b/set_real_ip_from-tor_ips_v6.conf
@@ -273,6 +273,7 @@ set_real_ip_from 2a02:16d0:0:5::1;
 set_real_ip_from 2a02:2970:1001::4b;
 set_real_ip_from 2a02:418:6017::147;
 set_real_ip_from 2a02:418:6017::148;
+set_real_ip_from 2a02:7aa0:1619::ba45:e7f2;
 set_real_ip_from 2a02:7aa0:5000::1ec;
 set_real_ip_from 2a02:898:218::1;
 set_real_ip_from 2a02:898:218::2;
@@ -501,11 +502,13 @@ set_real_ip_from 2a0b:f4c2:2::37;
 set_real_ip_from 2a0b:f4c2:2::38;
 set_real_ip_from 2a0b:f4c2:2::39;
 set_real_ip_from 2a0b:f4c2::24;
+set_real_ip_from 2a0b:f4c2:2::40;
 set_real_ip_from 2a0b:f4c2:2::41;
 set_real_ip_from 2a0b:f4c2:2::42;
 set_real_ip_from 2a0b:f4c2:2::43;
 set_real_ip_from 2a0b:f4c2:2::44;
 set_real_ip_from 2a0b:f4c2:2::45;
+set_real_ip_from 2a0b:f4c2:2::46;
 set_real_ip_from 2a0b:f4c2:2::47;
 set_real_ip_from 2a0b:f4c2:2::48;
 set_real_ip_from 2a0b:f4c2:2::49;
@@ -592,7 +595,6 @@ set_real_ip_from 2a0f:93c1:26:1f2::9ce5;
 set_real_ip_from 2a0f:df00:0:255::194;
 set_real_ip_from 2a0f:df00:0:255::195;
 set_real_ip_from 2a0f:df00:0:255::196;
-set_real_ip_from 2a0f:df00:0:255::197;
 set_real_ip_from 2a0f:df00:0:255::198;
 set_real_ip_from 2a0f:df00:0:255::199;
 set_real_ip_from 2a0f:df00:0:255::200;
@@ -624,4 +626,5 @@ set_real_ip_from 2a12:5940:d0e2::2;
 set_real_ip_from 2a12:5940:f0a8::2;
 set_real_ip_from 2a12:8641:3:12::;
 set_real_ip_from 2a12:8641:3:24::;
+set_real_ip_from 2a12:8641:3:38::;
 set_real_ip_from 2a12:a800:2:1:45:138:16:203;
