--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -223,7 +223,6 @@ allow 179.43.159.78;
 allow 179.43.182.232;
 allow 179.43.182.58;
 allow 180.150.226.99;
-allow 18.233.79.205;
 allow 184.105.48.40;
 allow 184.75.221.163;
 allow 185.100.85.132;
@@ -246,11 +245,15 @@ allow 185.107.70.56;
 allow 185.113.128.30;
 allow 185.129.61.1;
 allow 185.129.61.10;
+allow 185.129.61.129;
 allow 185.129.61.2;
 allow 185.129.61.3;
+allow 185.129.61.4;
 allow 185.129.61.5;
 allow 185.129.61.6;
 allow 185.129.61.7;
+allow 185.129.61.8;
+allow 185.129.61.9;
 allow 185.129.62.62;
 allow 185.129.62.63;
 allow 185.130.44.108;
@@ -424,7 +427,6 @@ allow 185.220.101.43;
 allow 185.220.101.44;
 allow 185.220.101.45;
 allow 185.220.101.46;
-allow 185.220.101.47;
 allow 185.220.101.48;
 allow 185.220.101.49;
 allow 185.220.101.5;
@@ -490,6 +492,7 @@ allow 185.227.134.106;
 allow 185.227.68.78;
 allow 185.233.100.23;
 allow 185.235.146.29;
+allow 185.239.71.160;
 allow 185.241.208.115;
 allow 185.241.208.196;
 allow 185.241.208.202;
@@ -511,7 +514,6 @@ allow 185.243.218.89;
 allow 185.243.218.95;
 allow 185.244.192.175;
 allow 185.244.192.184;
-allow 185.246.128.161;
 allow 185.246.188.140;
 allow 185.246.188.141;
 allow 185.246.188.142;
@@ -716,7 +718,6 @@ allow 2001:41d0:a:5c0::1;
 allow 2001:41d0:a:fe22::1;
 allow 2001:470:1:908::9001;
 allow 2001:4b20:12:f001::105;
-allow 2001:4b98:dc0:43:f816:3eff:fe5f:cf14;
 allow 2001:4b98:dc0:47:216:3eff:fe3d:888c;
 allow 2001:620:20d0::19;
 allow 2001:620:20d0::20;
@@ -787,13 +788,17 @@ allow 2001:67c:6ec:203:218:33ff:fe44:5524;
 allow 2001:67c:6ec:203:218:33ff:fe44:5525;
 allow 2001:67c:6ec:203:218:33ff:fe44:5526;
 allow 2001:67c:6ec:203:218:33ff:fe44:5527;
+allow 2001:67c:89c:666::1;
 allow 2001:67c:89c:702:1ce:1ce:babe:1;
 allow 2001:67c:89c:702:1ce:1ce:babe:10;
 allow 2001:67c:89c:702:1ce:1ce:babe:2;
 allow 2001:67c:89c:702:1ce:1ce:babe:3;
+allow 2001:67c:89c:702:1ce:1ce:babe:4;
 allow 2001:67c:89c:702:1ce:1ce:babe:5;
 allow 2001:67c:89c:702:1ce:1ce:babe:6;
 allow 2001:67c:89c:702:1ce:1ce:babe:7;
+allow 2001:67c:89c:702:1ce:1ce:babe:8;
+allow 2001:67c:89c:702:1ce:1ce:babe:9;
 allow 2001:910:1400:107::2;
 allow 2001:b030:2422::7234;
 allow 2001:bc8:1201:608:46a8:42ff:fe3d:2743;
@@ -931,6 +936,7 @@ allow 2603:3:6107:47a0::;
 allow 2603:3:610a:5050::;
 allow 2603:3:610c:7640::;
 allow 2603:c026:c102:5ff:2603:c026:c102:5ff;
+allow 2604:2dc0:202:300::ed3;
 allow 2604:6600:0:42::2;
 allow 2604:b480:3:6::2;
 allow 2605:2700:0:2:a800:ff:fe39:574;
@@ -1138,7 +1144,6 @@ allow 2a03:e600:100::70;
 allow 2a03:e600:100::71;
 allow 2a04:52c0:101:46a::;
 allow 2a04:52c0:102:46e0::1;
-allow 2a04:52c0:102:f657::1;
 allow 2a04:52c0:103:5acd::1;
 allow 2a04:52c0:104:31e6::1;
 allow 2a04:52c0:104:ad97::1;
@@ -1299,7 +1304,6 @@ allow 2a0b:f4c2:2::43;
 allow 2a0b:f4c2:2::44;
 allow 2a0b:f4c2:2::45;
 allow 2a0b:f4c2:2::46;
-allow 2a0b:f4c2:2::47;
 allow 2a0b:f4c2:2::48;
 allow 2a0b:f4c2:2::49;
 allow 2a0b:f4c2::25;
@@ -1438,7 +1442,6 @@ allow 38.97.116.244;
 allow 45.128.232.102;
 allow 45.128.232.170;
 allow 45.132.246.245;
-allow 45.134.225.36;
 allow 45.135.132.20;
 allow 45.138.16.107;
 allow 45.138.16.113;
@@ -1531,6 +1534,7 @@ allow 51.222.84.46;
 allow 51.38.113.118;
 allow 51.38.81.135;
 allow 51.75.64.23;
+allow 51.81.222.62;
 allow 51.81.254.14;
 allow 51.81.254.4;
 allow 5.181.80.107;
@@ -1539,6 +1543,7 @@ allow 51.89.138.51;
 allow 51.89.153.112;
 allow 5.196.8.113;
 allow 5.196.95.34;
+allow 52.44.67.23;
 allow 5.255.100.219;
 allow 5.255.100.26;
 allow 5.255.101.10;
@@ -1559,7 +1564,6 @@ allow 5.255.125.196;
 allow 5.255.125.41;
 allow 5.255.127.222;
 allow 5.255.97.221;
-allow 5.255.97.24;
 allow 5.255.98.151;
 allow 5.255.98.23;
 allow 5.255.99.108;
@@ -1611,7 +1615,6 @@ allow 77.81.247.72;
 allow 77.91.85.147;
 allow 77.91.86.95;
 allow 77.91.87.79;
-allow 78.142.18.219;
 allow 79.124.8.241;
 allow 79.137.195.103;
 allow 79.137.198.213;
@@ -1700,7 +1703,6 @@ allow 92.205.163.226;
 allow 92.205.185.52;
 allow 92.205.237.227;
 allow 92.205.31.137;
-allow 92.243.24.163;
 allow 92.246.84.133;
 allow 93.123.12.112;
 allow 93.243.56.177;
