--- a/set_real_ip_from-tor_ips_v6.conf
+++ b/set_real_ip_from-tor_ips_v6.conf
@@ -23,7 +23,6 @@ set_real_ip_from 2001:41d0:a:5c0::1;
 set_real_ip_from 2001:41d0:a:fe22::1;
 set_real_ip_from 2001:470:1:908::9001;
 set_real_ip_from 2001:4b20:12:f001::105;
-set_real_ip_from 2001:4b98:dc0:43:f816:3eff:fe5f:cf14;
 set_real_ip_from 2001:4b98:dc0:47:216:3eff:fe3d:888c;
 set_real_ip_from 2001:620:20d0::19;
 set_real_ip_from 2001:620:20d0::20;
@@ -94,13 +93,17 @@ set_real_ip_from 2001:67c:6ec:203:218:33ff:fe44:5524;
 set_real_ip_from 2001:67c:6ec:203:218:33ff:fe44:5525;
 set_real_ip_from 2001:67c:6ec:203:218:33ff:fe44:5526;
 set_real_ip_from 2001:67c:6ec:203:218:33ff:fe44:5527;
+set_real_ip_from 2001:67c:89c:666::1;
 set_real_ip_from 2001:67c:89c:702:1ce:1ce:babe:1;
 set_real_ip_from 2001:67c:89c:702:1ce:1ce:babe:10;
 set_real_ip_from 2001:67c:89c:702:1ce:1ce:babe:2;
 set_real_ip_from 2001:67c:89c:702:1ce:1ce:babe:3;
+set_real_ip_from 2001:67c:89c:702:1ce:1ce:babe:4;
 set_real_ip_from 2001:67c:89c:702:1ce:1ce:babe:5;
 set_real_ip_from 2001:67c:89c:702:1ce:1ce:babe:6;
 set_real_ip_from 2001:67c:89c:702:1ce:1ce:babe:7;
+set_real_ip_from 2001:67c:89c:702:1ce:1ce:babe:8;
+set_real_ip_from 2001:67c:89c:702:1ce:1ce:babe:9;
 set_real_ip_from 2001:910:1400:107::2;
 set_real_ip_from 2001:b030:2422::7234;
 set_real_ip_from 2001:bc8:1201:608:46a8:42ff:fe3d:2743;
@@ -139,6 +142,7 @@ set_real_ip_from 2603:3:6107:47a0::;
 set_real_ip_from 2603:3:610a:5050::;
 set_real_ip_from 2603:3:610c:7640::;
 set_real_ip_from 2603:c026:c102:5ff:2603:c026:c102:5ff;
+set_real_ip_from 2604:2dc0:202:300::ed3;
 set_real_ip_from 2604:6600:0:42::2;
 set_real_ip_from 2604:b480:3:6::2;
 set_real_ip_from 2605:2700:0:2:a800:ff:fe39:574;
@@ -345,7 +349,6 @@ set_real_ip_from 2a03:e600:100::70;
 set_real_ip_from 2a03:e600:100::71;
 set_real_ip_from 2a04:52c0:101:46a::;
 set_real_ip_from 2a04:52c0:102:46e0::1;
-set_real_ip_from 2a04:52c0:102:f657::1;
 set_real_ip_from 2a04:52c0:103:5acd::1;
 set_real_ip_from 2a04:52c0:104:31e6::1;
 set_real_ip_from 2a04:52c0:104:ad97::1;
@@ -506,7 +509,6 @@ set_real_ip_from 2a0b:f4c2:2::43;
 set_real_ip_from 2a0b:f4c2:2::44;
 set_real_ip_from 2a0b:f4c2:2::45;
 set_real_ip_from 2a0b:f4c2:2::46;
-set_real_ip_from 2a0b:f4c2:2::47;
 set_real_ip_from 2a0b:f4c2:2::48;
 set_real_ip_from 2a0b:f4c2:2::49;
 set_real_ip_from 2a0b:f4c2::25;
