--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -126,7 +126,6 @@ allow 135.125.55.237;
 allow 136.244.111.163;
 allow 138.128.222.68;
 allow 138.201.203.206;
-allow 138.201.38.46;
 allow 138.59.18.110;
 allow 139.99.172.11;
 allow 141.239.149.94;
@@ -177,6 +176,13 @@ allow 163.172.45.102;
 allow 163.5.143.76;
 allow 165.73.242.163;
 allow 166.70.207.2;
+allow 171.25.193.20;
+allow 171.25.193.234;
+allow 171.25.193.235;
+allow 171.25.193.25;
+allow 171.25.193.77;
+allow 171.25.193.79;
+allow 171.25.193.80;
 allow 172.232.161.205;
 allow 172.232.161.206;
 allow 172.81.131.139;
@@ -262,6 +268,7 @@ allow 185.130.47.58;
 allow 185.141.147.128;
 allow 185.142.239.49;
 allow 185.146.232.234;
+allow 185.146.232.243;
 allow 185.14.97.37;
 allow 185.153.197.227;
 allow 185.154.110.142;
@@ -427,6 +434,7 @@ allow 185.220.101.43;
 allow 185.220.101.44;
 allow 185.220.101.45;
 allow 185.220.101.46;
+allow 185.220.101.47;
 allow 185.220.101.48;
 allow 185.220.101.49;
 allow 185.220.101.5;
@@ -548,6 +556,7 @@ allow 188.214.104.21;
 allow 188.68.41.191;
 allow 188.68.49.235;
 allow 188.68.52.231;
+allow 189.147.255.75;
 allow 190.103.179.98;
 allow 190.120.229.98;
 allow 190.211.254.97;
@@ -664,6 +673,7 @@ allow 195.176.3.23;
 allow 195.176.3.24;
 allow 195.80.151.30;
 allow 195.88.74.206;
+allow 196.189.30.114;
 allow 198.144.178.163;
 allow 198.167.193.136;
 allow 198.23.133.132;
@@ -715,7 +725,6 @@ allow 2001:41d0:800:1f70::;
 allow 2001:41d0:801:2000::15bb;
 allow 2001:41d0:801:2000::2b97;
 allow 2001:41d0:a:5c0::1;
-allow 2001:41d0:a:fe22::1;
 allow 2001:470:1:908::9001;
 allow 2001:4b20:12:f001::105;
 allow 2001:4b98:dc0:47:216:3eff:fe3d:888c;
@@ -730,6 +739,13 @@ allow 2001:678:e3c::c;
 allow 2001:678:e3c::d;
 allow 2001:67c:2044:1905::26;
 allow 2001:67c:2608::1;
+allow 2001:67c:289c::20;
+allow 2001:67c:289c:2::234;
+allow 2001:67c:289c:2::235;
+allow 2001:67c:289c::25;
+allow 2001:67c:289c:4::77;
+allow 2001:67c:289c:4::79;
+allow 2001:67c:289c:4::80;
 allow 2001:67c:6ec:203:192:42:116:173;
 allow 2001:67c:6ec:203:192:42:116:174;
 allow 2001:67c:6ec:203:192:42:116:175;
@@ -807,7 +823,6 @@ allow 2001:bc8:634:2177::1;
 allow 2001:bc8:700:9212::1;
 allow 2001:bf0:666::666;
 allow 2001:df7:7e80:100:9f2b:1d15:c713:52ad;
-allow 201.137.254.136;
 allow 202.182.99.129;
 allow 202.61.226.98;
 allow 202.69.76.36;
@@ -1177,6 +1192,7 @@ allow 2a06:1700:0:15::2;
 allow 2a06:1700:0:15::3;
 allow 2a06:1700:0:15::4;
 allow 2a06:1700:0:16::1;
+allow 2a06:1700:0:16b::11;
 allow 2a06:1700:0:3c::1;
 allow 2a06:1700:0:50::11;
 allow 2a06:1700:1::11;
@@ -1304,6 +1320,7 @@ allow 2a0b:f4c2:2::43;
 allow 2a0b:f4c2:2::44;
 allow 2a0b:f4c2:2::45;
 allow 2a0b:f4c2:2::46;
+allow 2a0b:f4c2:2::47;
 allow 2a0b:f4c2:2::48;
 allow 2a0b:f4c2:2::49;
 allow 2a0b:f4c2::25;
@@ -1402,7 +1419,6 @@ allow 2a0f:df00:0:255::206;
 allow 2a0f:e586:f:f::133;
 allow 2a0f:e586:f:f::182;
 allow 2a10:8a40:f313::29;
-allow 2a10:c800:1:9cc6::1;
 allow 2a11:6100:0:22:a236:9fff:fe9e:36ea;
 allow 2a12:5940:13e2::2;
 allow 2a12:5940:144f::2;
@@ -1416,7 +1432,6 @@ allow 2a12:5940:b4dd::2;
 allow 2a12:5940:c80b::2;
 allow 2a12:5940:c814::2;
 allow 2a12:5940:c820::2;
-allow 2a12:5940:c826::2;
 allow 2a12:5940:d0e2::2;
 allow 2a12:5940:f0a8::2;
 allow 2a12:8641:3:12::;
@@ -1442,6 +1457,7 @@ allow 38.97.116.244;
 allow 45.128.232.102;
 allow 45.128.232.170;
 allow 45.132.246.245;
+allow 45.134.225.36;
 allow 45.135.132.20;
 allow 45.138.16.107;
 allow 45.138.16.113;
@@ -1542,8 +1558,6 @@ allow 5.182.86.212;
 allow 51.89.138.51;
 allow 51.89.153.112;
 allow 5.196.8.113;
-allow 5.196.95.34;
-allow 52.44.67.23;
 allow 5.255.100.219;
 allow 5.255.100.26;
 allow 5.255.101.10;
@@ -1573,6 +1587,7 @@ allow 5.255.99.5;
 allow 5.2.67.226;
 allow 5.2.79.179;
 allow 5.2.79.190;
+allow 54.156.16.216;
 allow 54.224.79.94;
 allow 5.42.66.6;
 allow 5.42.80.232;
@@ -1615,6 +1630,7 @@ allow 77.81.247.72;
 allow 77.91.85.147;
 allow 77.91.86.95;
 allow 77.91.87.79;
+allow 78.142.18.219;
 allow 79.124.8.241;
 allow 79.137.195.103;
 allow 79.137.198.213;
@@ -1693,7 +1709,6 @@ allow 91.208.75.239;
 allow 91.208.75.3;
 allow 91.208.75.4;
 allow 91.210.59.57;
-allow 91.219.236.101;
 allow 91.219.237.56;
 allow 91.219.239.166;
 allow 91.92.109.126;
@@ -1728,7 +1743,6 @@ allow 94.177.106.37;
 allow 94.177.106.46;
 allow 94.177.106.55;
 allow 94.177.106.59;
-allow 94.228.163.25;
 allow 94.228.169.70;
 allow 94.230.208.147;
 allow 94.230.208.148;
