--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -126,7 +126,6 @@ set_real_ip_from 135.125.55.237;
 set_real_ip_from 136.244.111.163;
 set_real_ip_from 138.128.222.68;
 set_real_ip_from 138.201.203.206;
-set_real_ip_from 138.201.38.46;
 set_real_ip_from 138.59.18.110;
 set_real_ip_from 139.99.172.11;
 set_real_ip_from 141.239.149.94;
@@ -177,6 +176,13 @@ set_real_ip_from 163.172.45.102;
 set_real_ip_from 163.5.143.76;
 set_real_ip_from 165.73.242.163;
 set_real_ip_from 166.70.207.2;
+set_real_ip_from 171.25.193.20;
+set_real_ip_from 171.25.193.234;
+set_real_ip_from 171.25.193.235;
+set_real_ip_from 171.25.193.25;
+set_real_ip_from 171.25.193.77;
+set_real_ip_from 171.25.193.79;
+set_real_ip_from 171.25.193.80;
 set_real_ip_from 172.232.161.205;
 set_real_ip_from 172.232.161.206;
 set_real_ip_from 172.81.131.139;
@@ -262,6 +268,7 @@ set_real_ip_from 185.130.47.58;
 set_real_ip_from 185.141.147.128;
 set_real_ip_from 185.142.239.49;
 set_real_ip_from 185.146.232.234;
+set_real_ip_from 185.146.232.243;
 set_real_ip_from 185.14.97.37;
 set_real_ip_from 185.153.197.227;
 set_real_ip_from 185.154.110.142;
@@ -427,6 +434,7 @@ set_real_ip_from 185.220.101.43;
 set_real_ip_from 185.220.101.44;
 set_real_ip_from 185.220.101.45;
 set_real_ip_from 185.220.101.46;
+set_real_ip_from 185.220.101.47;
 set_real_ip_from 185.220.101.48;
 set_real_ip_from 185.220.101.49;
 set_real_ip_from 185.220.101.5;
@@ -548,6 +556,7 @@ set_real_ip_from 188.214.104.21;
 set_real_ip_from 188.68.41.191;
 set_real_ip_from 188.68.49.235;
 set_real_ip_from 188.68.52.231;
+set_real_ip_from 189.147.255.75;
 set_real_ip_from 190.103.179.98;
 set_real_ip_from 190.120.229.98;
 set_real_ip_from 190.211.254.97;
@@ -664,6 +673,7 @@ set_real_ip_from 195.176.3.23;
 set_real_ip_from 195.176.3.24;
 set_real_ip_from 195.80.151.30;
 set_real_ip_from 195.88.74.206;
+set_real_ip_from 196.189.30.114;
 set_real_ip_from 198.144.178.163;
 set_real_ip_from 198.167.193.136;
 set_real_ip_from 198.23.133.132;
@@ -715,7 +725,6 @@ set_real_ip_from 2001:41d0:800:1f70::;
 set_real_ip_from 2001:41d0:801:2000::15bb;
 set_real_ip_from 2001:41d0:801:2000::2b97;
 set_real_ip_from 2001:41d0:a:5c0::1;
-set_real_ip_from 2001:41d0:a:fe22::1;
 set_real_ip_from 2001:470:1:908::9001;
 set_real_ip_from 2001:4b20:12:f001::105;
 set_real_ip_from 2001:4b98:dc0:47:216:3eff:fe3d:888c;
@@ -730,6 +739,13 @@ set_real_ip_from 2001:678:e3c::c;
 set_real_ip_from 2001:678:e3c::d;
 set_real_ip_from 2001:67c:2044:1905::26;
 set_real_ip_from 2001:67c:2608::1;
+set_real_ip_from 2001:67c:289c::20;
+set_real_ip_from 2001:67c:289c:2::234;
+set_real_ip_from 2001:67c:289c:2::235;
+set_real_ip_from 2001:67c:289c::25;
+set_real_ip_from 2001:67c:289c:4::77;
+set_real_ip_from 2001:67c:289c:4::79;
+set_real_ip_from 2001:67c:289c:4::80;
 set_real_ip_from 2001:67c:6ec:203:192:42:116:173;
 set_real_ip_from 2001:67c:6ec:203:192:42:116:174;
 set_real_ip_from 2001:67c:6ec:203:192:42:116:175;
@@ -807,7 +823,6 @@ set_real_ip_from 2001:bc8:634:2177::1;
 set_real_ip_from 2001:bc8:700:9212::1;
 set_real_ip_from 2001:bf0:666::666;
 set_real_ip_from 2001:df7:7e80:100:9f2b:1d15:c713:52ad;
-set_real_ip_from 201.137.254.136;
 set_real_ip_from 202.182.99.129;
 set_real_ip_from 202.61.226.98;
 set_real_ip_from 202.69.76.36;
@@ -1177,6 +1192,7 @@ set_real_ip_from 2a06:1700:0:15::2;
 set_real_ip_from 2a06:1700:0:15::3;
 set_real_ip_from 2a06:1700:0:15::4;
 set_real_ip_from 2a06:1700:0:16::1;
+set_real_ip_from 2a06:1700:0:16b::11;
 set_real_ip_from 2a06:1700:0:3c::1;
 set_real_ip_from 2a06:1700:0:50::11;
 set_real_ip_from 2a06:1700:1::11;
@@ -1304,6 +1320,7 @@ set_real_ip_from 2a0b:f4c2:2::43;
 set_real_ip_from 2a0b:f4c2:2::44;
 set_real_ip_from 2a0b:f4c2:2::45;
 set_real_ip_from 2a0b:f4c2:2::46;
+set_real_ip_from 2a0b:f4c2:2::47;
 set_real_ip_from 2a0b:f4c2:2::48;
 set_real_ip_from 2a0b:f4c2:2::49;
 set_real_ip_from 2a0b:f4c2::25;
@@ -1402,7 +1419,6 @@ set_real_ip_from 2a0f:df00:0:255::206;
 set_real_ip_from 2a0f:e586:f:f::133;
 set_real_ip_from 2a0f:e586:f:f::182;
 set_real_ip_from 2a10:8a40:f313::29;
-set_real_ip_from 2a10:c800:1:9cc6::1;
 set_real_ip_from 2a11:6100:0:22:a236:9fff:fe9e:36ea;
 set_real_ip_from 2a12:5940:13e2::2;
 set_real_ip_from 2a12:5940:144f::2;
@@ -1416,7 +1432,6 @@ set_real_ip_from 2a12:5940:b4dd::2;
 set_real_ip_from 2a12:5940:c80b::2;
 set_real_ip_from 2a12:5940:c814::2;
 set_real_ip_from 2a12:5940:c820::2;
-set_real_ip_from 2a12:5940:c826::2;
 set_real_ip_from 2a12:5940:d0e2::2;
 set_real_ip_from 2a12:5940:f0a8::2;
 set_real_ip_from 2a12:8641:3:12::;
@@ -1442,6 +1457,7 @@ set_real_ip_from 38.97.116.244;
 set_real_ip_from 45.128.232.102;
 set_real_ip_from 45.128.232.170;
 set_real_ip_from 45.132.246.245;
+set_real_ip_from 45.134.225.36;
 set_real_ip_from 45.135.132.20;
 set_real_ip_from 45.138.16.107;
 set_real_ip_from 45.138.16.113;
@@ -1542,8 +1558,6 @@ set_real_ip_from 5.182.86.212;
 set_real_ip_from 51.89.138.51;
 set_real_ip_from 51.89.153.112;
 set_real_ip_from 5.196.8.113;
-set_real_ip_from 5.196.95.34;
-set_real_ip_from 52.44.67.23;
 set_real_ip_from 5.255.100.219;
 set_real_ip_from 5.255.100.26;
 set_real_ip_from 5.255.101.10;
@@ -1573,6 +1587,7 @@ set_real_ip_from 5.255.99.5;
 set_real_ip_from 5.2.67.226;
 set_real_ip_from 5.2.79.179;
 set_real_ip_from 5.2.79.190;
+set_real_ip_from 54.156.16.216;
 set_real_ip_from 54.224.79.94;
 set_real_ip_from 5.42.66.6;
 set_real_ip_from 5.42.80.232;
@@ -1615,6 +1630,7 @@ set_real_ip_from 77.81.247.72;
 set_real_ip_from 77.91.85.147;
 set_real_ip_from 77.91.86.95;
 set_real_ip_from 77.91.87.79;
+set_real_ip_from 78.142.18.219;
 set_real_ip_from 79.124.8.241;
 set_real_ip_from 79.137.195.103;
 set_real_ip_from 79.137.198.213;
@@ -1693,7 +1709,6 @@ set_real_ip_from 91.208.75.239;
 set_real_ip_from 91.208.75.3;
 set_real_ip_from 91.208.75.4;
 set_real_ip_from 91.210.59.57;
-set_real_ip_from 91.219.236.101;
 set_real_ip_from 91.219.237.56;
 set_real_ip_from 91.219.239.166;
 set_real_ip_from 91.92.109.126;
@@ -1728,7 +1743,6 @@ set_real_ip_from 94.177.106.37;
 set_real_ip_from 94.177.106.46;
 set_real_ip_from 94.177.106.55;
 set_real_ip_from 94.177.106.59;
-set_real_ip_from 94.228.163.25;
 set_real_ip_from 94.228.169.70;
 set_real_ip_from 94.230.208.147;
 set_real_ip_from 94.230.208.148;
