Update lists at 20240224-0001

--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -52,7 +52,6 @@ allow 107.189.10.175;
 allow 107.189.11.111;
 allow 107.189.11.166;
 allow 107.189.1.160;
-allow 107.189.1.175;
 allow 107.189.11.80;
 allow 107.189.12.3;
 allow 107.189.13.180;
@@ -90,7 +89,6 @@ allow 107.189.8.238;
 allow 107.189.8.5;
 allow 107.189.8.56;
 allow 107.189.8.65;
-allow 108.181.124.143;
 allow 108.181.27.205;
 allow 108.181.69.243;
 allow 108.61.189.136;
@@ -120,7 +118,6 @@ allow 128.31.0.13;
 allow 130.193.10.21;
 allow 130.193.15.186;
 allow 130.193.15.79;
-allow 130.204.161.3;
 allow 135.125.205.25;
 allow 135.125.55.237;
 allow 136.244.111.163;
@@ -216,6 +213,7 @@ allow 178.218.144.51;
 allow 178.218.144.99;
 allow 178.236.237.23;
 allow 178.236.247.122;
+allow 178.31.104.79;
 allow 179.43.128.16;
 allow 179.43.134.18;
 allow 179.43.159.194;
@@ -646,6 +644,7 @@ allow 193.233.133.109;
 allow 193.233.233.124;
 allow 193.239.232.102;
 allow 193.239.232.228;
+allow 193.239.232.230;
 allow 193.26.115.43;
 allow 193.26.115.61;
 allow 193.35.18.105;
@@ -728,6 +727,7 @@ allow 2001:41d0:a:5c0::1;
 allow 2001:41d0:a:fe22::1;
 allow 2001:470:1:908::9001;
 allow 2001:4b20:12:f001::105;
+allow 2001:4b98:dc0:43:f816:3eff:fe5f:cf14;
 allow 2001:4b98:dc0:47:216:3eff:fe3d:888c;
 allow 2001:620:20d0::19;
 allow 2001:620:20d0::20;
@@ -1022,7 +1022,6 @@ allow 2605:6400:30:f753:891d:ee77:e97c:741a;
 allow 2605:6400:30:f78b::2;
 allow 2605:6400:30:f7c0:8511:b113:ca11:9baa;
 allow 2605:6400:30:f7ca::2;
-allow 2605:6400:30:f7fa:c230:6fe8:a09a:5836;
 allow 2605:6400:30:f805:1e96:b223:fbe5:cfac;
 allow 2605:6400:30:f82f:7de1:3de3:8947:bc6a;
 allow 2605:6400:30:f858:2704:73e1:7085:12ef;
@@ -1417,8 +1416,8 @@ allow 2a0f:df00:0:255::206;
 allow 2a0f:e586:f:f::133;
 allow 2a0f:e586:f:f::182;
 allow 2a10:8a40:f313::29;
-allow 2a10:c800:1:9cc6::1;
 allow 2a11:6100:0:22:a236:9fff:fe9e:36ea;
+allow 2a12:1e01::2;
 allow 2a12:5940:13e2::2;
 allow 2a12:5940:144f::2;
 allow 2a12:5940:4462::2;
@@ -1439,7 +1438,6 @@ allow 2a12:8641:3:38::;
 allow 2a12:a800:2:1:45:138:16:203;
 allow 31.129.22.65;
 allow 31.13.189.118;
-allow 31.220.87.46;
 allow 31.220.98.139;
 allow 31.42.185.227;
 allow 35.0.127.52;
@@ -1528,7 +1526,6 @@ allow 46.183.222.181;
 allow 46.183.222.183;
 allow 46.183.222.184;
 allow 46.183.222.185;
-allow 46.195.71.68;
 allow 46.226.164.14;
 allow 46.232.251.191;
 allow 46.234.47.105;
@@ -1558,7 +1555,6 @@ allow 51.89.138.51;
 allow 51.89.153.112;
 allow 5.196.8.113;
 allow 5.196.95.34;
-allow 52.200.170.41;
 allow 5.255.100.219;
 allow 5.255.101.10;
 allow 5.255.101.131;
@@ -1587,6 +1583,7 @@ allow 5.255.99.5;
 allow 5.2.67.226;
 allow 5.2.79.179;
 allow 5.2.79.190;
+allow 52.86.70.11;
 allow 54.224.79.94;
 allow 5.42.66.6;
 allow 5.42.80.232;
@@ -1709,7 +1706,6 @@ allow 91.208.75.239;
 allow 91.208.75.3;
 allow 91.208.75.4;
 allow 91.210.59.57;
-allow 91.219.236.101;
 allow 91.219.237.56;
 allow 91.219.239.166;
 allow 91.92.109.126;
@@ -1719,6 +1715,7 @@ allow 92.205.163.226;
 allow 92.205.185.52;
 allow 92.205.237.227;
 allow 92.205.31.137;
+allow 92.243.24.163;
 allow 92.246.84.133;
 allow 93.123.12.112;
 allow 93.243.56.177;
@@ -1760,5 +1757,4 @@ allow 95.211.210.103;
 allow 95.211.244.28;
 allow 95.211.7.148;
 allow 96.27.198.133;
-allow 96.42.26.63;
 allow 96.66.15.152;
