Update lists at 20240224-0301

--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -253,6 +253,7 @@ deny 2a00:1169:117:5510::;
 deny 2a00:1169:119:b120::;
 deny 2a00:1169:11f:5200::;
 deny 2a00:1169:11f:d680::;
+deny 2a00:11c0:1c:311::5;
 deny 2a00:11c0:1f:1::55;
 deny 2a00:1728:f:f:f:f:1d1f:b701;
 deny 2a00:1728:f:f:f:f:c03c:9898;
@@ -499,41 +500,9 @@ deny 2a0b:f4c2::20;
 deny 2a0b:f4c2::21;
 deny 2a0b:f4c2::22;
 deny 2a0b:f4c2::23;
-deny 2a0b:f4c2:2::32;
-deny 2a0b:f4c2:2::33;
-deny 2a0b:f4c2:2::34;
-deny 2a0b:f4c2:2::35;
-deny 2a0b:f4c2:2::36;
-deny 2a0b:f4c2:2::37;
-deny 2a0b:f4c2:2::38;
-deny 2a0b:f4c2:2::39;
 deny 2a0b:f4c2::24;
-deny 2a0b:f4c2:2::40;
-deny 2a0b:f4c2:2::41;
-deny 2a0b:f4c2:2::42;
-deny 2a0b:f4c2:2::43;
-deny 2a0b:f4c2:2::44;
-deny 2a0b:f4c2:2::45;
-deny 2a0b:f4c2:2::46;
-deny 2a0b:f4c2:2::47;
-deny 2a0b:f4c2:2::48;
-deny 2a0b:f4c2:2::49;
 deny 2a0b:f4c2::25;
-deny 2a0b:f4c2:2::50;
-deny 2a0b:f4c2:2::51;
-deny 2a0b:f4c2:2::52;
-deny 2a0b:f4c2:2::53;
-deny 2a0b:f4c2:2::54;
-deny 2a0b:f4c2:2::55;
-deny 2a0b:f4c2:2::56;
-deny 2a0b:f4c2:2::57;
-deny 2a0b:f4c2:2::58;
-deny 2a0b:f4c2:2::59;
 deny 2a0b:f4c2::26;
-deny 2a0b:f4c2:2::60;
-deny 2a0b:f4c2:2::61;
-deny 2a0b:f4c2:2::62;
-deny 2a0b:f4c2:2::63;
 deny 2a0b:f4c2::27;
 deny 2a0b:f4c2::28;
 deny 2a0b:f4c2::29;
@@ -614,6 +583,7 @@ deny 2a0f:df00:0:255::206;
 deny 2a0f:e586:f:f::133;
 deny 2a0f:e586:f:f::182;
 deny 2a10:8a40:f313::29;
+deny 2a10:c800:1:9cc6::1;
 deny 2a11:6100:0:22:a236:9fff:fe9e:36ea;
 deny 2a12:1e01::2;
 deny 2a12:5940:13e2::2;
