--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -118,6 +118,7 @@ set_real_ip_from 128.31.0.13;
 set_real_ip_from 130.193.10.21;
 set_real_ip_from 130.193.15.186;
 set_real_ip_from 130.193.15.79;
+set_real_ip_from 130.204.161.3;
 set_real_ip_from 135.125.205.25;
 set_real_ip_from 135.125.55.237;
 set_real_ip_from 136.244.111.163;
@@ -417,41 +418,9 @@ set_real_ip_from 185.220.101.29;
 set_real_ip_from 185.220.101.3;
 set_real_ip_from 185.220.101.30;
 set_real_ip_from 185.220.101.31;
-set_real_ip_from 185.220.101.32;
-set_real_ip_from 185.220.101.33;
-set_real_ip_from 185.220.101.34;
-set_real_ip_from 185.220.101.35;
-set_real_ip_from 185.220.101.36;
-set_real_ip_from 185.220.101.37;
-set_real_ip_from 185.220.101.38;
-set_real_ip_from 185.220.101.39;
 set_real_ip_from 185.220.101.4;
-set_real_ip_from 185.220.101.40;
-set_real_ip_from 185.220.101.41;
-set_real_ip_from 185.220.101.42;
-set_real_ip_from 185.220.101.43;
-set_real_ip_from 185.220.101.44;
-set_real_ip_from 185.220.101.45;
-set_real_ip_from 185.220.101.46;
-set_real_ip_from 185.220.101.47;
-set_real_ip_from 185.220.101.48;
-set_real_ip_from 185.220.101.49;
 set_real_ip_from 185.220.101.5;
-set_real_ip_from 185.220.101.50;
-set_real_ip_from 185.220.101.51;
-set_real_ip_from 185.220.101.52;
-set_real_ip_from 185.220.101.53;
-set_real_ip_from 185.220.101.54;
-set_real_ip_from 185.220.101.55;
-set_real_ip_from 185.220.101.56;
-set_real_ip_from 185.220.101.57;
-set_real_ip_from 185.220.101.58;
-set_real_ip_from 185.220.101.59;
 set_real_ip_from 185.220.101.6;
-set_real_ip_from 185.220.101.60;
-set_real_ip_from 185.220.101.61;
-set_real_ip_from 185.220.101.62;
-set_real_ip_from 185.220.101.63;
 set_real_ip_from 185.220.101.64;
 set_real_ip_from 185.220.101.65;
 set_real_ip_from 185.220.101.66;
@@ -1055,6 +1024,7 @@ set_real_ip_from 2a00:1169:117:5510::;
 set_real_ip_from 2a00:1169:119:b120::;
 set_real_ip_from 2a00:1169:11f:5200::;
 set_real_ip_from 2a00:1169:11f:d680::;
+set_real_ip_from 2a00:11c0:1c:311::5;
 set_real_ip_from 2a00:11c0:1f:1::55;
 set_real_ip_from 2a00:1728:f:f:f:f:1d1f:b701;
 set_real_ip_from 2a00:1728:f:f:f:f:c03c:9898;
@@ -1301,41 +1271,9 @@ set_real_ip_from 2a0b:f4c2::20;
 set_real_ip_from 2a0b:f4c2::21;
 set_real_ip_from 2a0b:f4c2::22;
 set_real_ip_from 2a0b:f4c2::23;
-set_real_ip_from 2a0b:f4c2:2::32;
-set_real_ip_from 2a0b:f4c2:2::33;
-set_real_ip_from 2a0b:f4c2:2::34;
-set_real_ip_from 2a0b:f4c2:2::35;
-set_real_ip_from 2a0b:f4c2:2::36;
-set_real_ip_from 2a0b:f4c2:2::37;
-set_real_ip_from 2a0b:f4c2:2::38;
-set_real_ip_from 2a0b:f4c2:2::39;
 set_real_ip_from 2a0b:f4c2::24;
-set_real_ip_from 2a0b:f4c2:2::40;
-set_real_ip_from 2a0b:f4c2:2::41;
-set_real_ip_from 2a0b:f4c2:2::42;
-set_real_ip_from 2a0b:f4c2:2::43;
-set_real_ip_from 2a0b:f4c2:2::44;
-set_real_ip_from 2a0b:f4c2:2::45;
-set_real_ip_from 2a0b:f4c2:2::46;
-set_real_ip_from 2a0b:f4c2:2::47;
-set_real_ip_from 2a0b:f4c2:2::48;
-set_real_ip_from 2a0b:f4c2:2::49;
 set_real_ip_from 2a0b:f4c2::25;
-set_real_ip_from 2a0b:f4c2:2::50;
-set_real_ip_from 2a0b:f4c2:2::51;
-set_real_ip_from 2a0b:f4c2:2::52;
-set_real_ip_from 2a0b:f4c2:2::53;
-set_real_ip_from 2a0b:f4c2:2::54;
-set_real_ip_from 2a0b:f4c2:2::55;
-set_real_ip_from 2a0b:f4c2:2::56;
-set_real_ip_from 2a0b:f4c2:2::57;
-set_real_ip_from 2a0b:f4c2:2::58;
-set_real_ip_from 2a0b:f4c2:2::59;
 set_real_ip_from 2a0b:f4c2::26;
-set_real_ip_from 2a0b:f4c2:2::60;
-set_real_ip_from 2a0b:f4c2:2::61;
-set_real_ip_from 2a0b:f4c2:2::62;
-set_real_ip_from 2a0b:f4c2:2::63;
 set_real_ip_from 2a0b:f4c2::27;
 set_real_ip_from 2a0b:f4c2::28;
 set_real_ip_from 2a0b:f4c2::29;
@@ -1416,6 +1354,7 @@ set_real_ip_from 2a0f:df00:0:255::206;
 set_real_ip_from 2a0f:e586:f:f::133;
 set_real_ip_from 2a0f:e586:f:f::182;
 set_real_ip_from 2a10:8a40:f313::29;
+set_real_ip_from 2a10:c800:1:9cc6::1;
 set_real_ip_from 2a11:6100:0:22:a236:9fff:fe9e:36ea;
 set_real_ip_from 2a12:1e01::2;
 set_real_ip_from 2a12:5940:13e2::2;
@@ -1438,8 +1377,10 @@ set_real_ip_from 2a12:8641:3:38::;
 set_real_ip_from 2a12:a800:2:1:45:138:16:203;
 set_real_ip_from 31.129.22.65;
 set_real_ip_from 31.13.189.118;
+set_real_ip_from 31.220.87.46;
 set_real_ip_from 31.220.98.139;
 set_real_ip_from 31.42.185.227;
+set_real_ip_from 34.229.26.187;
 set_real_ip_from 35.0.127.52;
 set_real_ip_from 37.120.166.23;
 set_real_ip_from 37.187.5.192;
@@ -1447,6 +1388,7 @@ set_real_ip_from 37.228.129.128;
 set_real_ip_from 37.228.129.131;
 set_real_ip_from 37.228.129.24;
 set_real_ip_from 37.228.129.63;
+set_real_ip_from 37.252.255.135;
 set_real_ip_from 37.48.120.196;
 set_real_ip_from 37.48.70.156;
 set_real_ip_from 38.242.239.62;
@@ -1556,6 +1498,7 @@ set_real_ip_from 51.89.153.112;
 set_real_ip_from 5.196.8.113;
 set_real_ip_from 5.196.95.34;
 set_real_ip_from 5.255.100.219;
+set_real_ip_from 5.255.100.26;
 set_real_ip_from 5.255.101.10;
 set_real_ip_from 5.255.101.131;
 set_real_ip_from 5.255.103.190;
@@ -1583,7 +1526,6 @@ set_real_ip_from 5.255.99.5;
 set_real_ip_from 5.2.67.226;
 set_real_ip_from 5.2.79.179;
 set_real_ip_from 5.2.79.190;
-set_real_ip_from 52.86.70.11;
 set_real_ip_from 54.224.79.94;
 set_real_ip_from 5.42.66.6;
 set_real_ip_from 5.42.80.232;
@@ -1706,6 +1648,7 @@ set_real_ip_from 91.208.75.239;
 set_real_ip_from 91.208.75.3;
 set_real_ip_from 91.208.75.4;
 set_real_ip_from 91.210.59.57;
+set_real_ip_from 91.219.236.101;
 set_real_ip_from 91.219.237.56;
 set_real_ip_from 91.219.239.166;
 set_real_ip_from 91.92.109.126;
