--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -118,6 +118,7 @@ allow 128.31.0.13;
 allow 130.193.10.21;
 allow 130.193.15.186;
 allow 130.193.15.79;
+allow 130.204.161.3;
 allow 135.125.205.25;
 allow 135.125.55.237;
 allow 136.244.111.163;
@@ -417,41 +418,9 @@ allow 185.220.101.29;
 allow 185.220.101.3;
 allow 185.220.101.30;
 allow 185.220.101.31;
-allow 185.220.101.32;
-allow 185.220.101.33;
-allow 185.220.101.34;
-allow 185.220.101.35;
-allow 185.220.101.36;
-allow 185.220.101.37;
-allow 185.220.101.38;
-allow 185.220.101.39;
 allow 185.220.101.4;
-allow 185.220.101.40;
-allow 185.220.101.41;
-allow 185.220.101.42;
-allow 185.220.101.43;
-allow 185.220.101.44;
-allow 185.220.101.45;
-allow 185.220.101.46;
-allow 185.220.101.47;
-allow 185.220.101.48;
-allow 185.220.101.49;
 allow 185.220.101.5;
-allow 185.220.101.50;
-allow 185.220.101.51;
-allow 185.220.101.52;
-allow 185.220.101.53;
-allow 185.220.101.54;
-allow 185.220.101.55;
-allow 185.220.101.56;
-allow 185.220.101.57;
-allow 185.220.101.58;
-allow 185.220.101.59;
 allow 185.220.101.6;
-allow 185.220.101.60;
-allow 185.220.101.61;
-allow 185.220.101.62;
-allow 185.220.101.63;
 allow 185.220.101.64;
 allow 185.220.101.65;
 allow 185.220.101.66;
@@ -1055,6 +1024,7 @@ allow 2a00:1169:117:5510::;
 allow 2a00:1169:119:b120::;
 allow 2a00:1169:11f:5200::;
 allow 2a00:1169:11f:d680::;
+allow 2a00:11c0:1c:311::5;
 allow 2a00:11c0:1f:1::55;
 allow 2a00:1728:f:f:f:f:1d1f:b701;
 allow 2a00:1728:f:f:f:f:c03c:9898;
@@ -1301,41 +1271,9 @@ allow 2a0b:f4c2::20;
 allow 2a0b:f4c2::21;
 allow 2a0b:f4c2::22;
 allow 2a0b:f4c2::23;
-allow 2a0b:f4c2:2::32;
-allow 2a0b:f4c2:2::33;
-allow 2a0b:f4c2:2::34;
-allow 2a0b:f4c2:2::35;
-allow 2a0b:f4c2:2::36;
-allow 2a0b:f4c2:2::37;
-allow 2a0b:f4c2:2::38;
-allow 2a0b:f4c2:2::39;
 allow 2a0b:f4c2::24;
-allow 2a0b:f4c2:2::40;
-allow 2a0b:f4c2:2::41;
-allow 2a0b:f4c2:2::42;
-allow 2a0b:f4c2:2::43;
-allow 2a0b:f4c2:2::44;
-allow 2a0b:f4c2:2::45;
-allow 2a0b:f4c2:2::46;
-allow 2a0b:f4c2:2::47;
-allow 2a0b:f4c2:2::48;
-allow 2a0b:f4c2:2::49;
 allow 2a0b:f4c2::25;
-allow 2a0b:f4c2:2::50;
-allow 2a0b:f4c2:2::51;
-allow 2a0b:f4c2:2::52;
-allow 2a0b:f4c2:2::53;
-allow 2a0b:f4c2:2::54;
-allow 2a0b:f4c2:2::55;
-allow 2a0b:f4c2:2::56;
-allow 2a0b:f4c2:2::57;
-allow 2a0b:f4c2:2::58;
-allow 2a0b:f4c2:2::59;
 allow 2a0b:f4c2::26;
-allow 2a0b:f4c2:2::60;
-allow 2a0b:f4c2:2::61;
-allow 2a0b:f4c2:2::62;
-allow 2a0b:f4c2:2::63;
 allow 2a0b:f4c2::27;
 allow 2a0b:f4c2::28;
 allow 2a0b:f4c2::29;
@@ -1416,6 +1354,7 @@ allow 2a0f:df00:0:255::206;
 allow 2a0f:e586:f:f::133;
 allow 2a0f:e586:f:f::182;
 allow 2a10:8a40:f313::29;
+allow 2a10:c800:1:9cc6::1;
 allow 2a11:6100:0:22:a236:9fff:fe9e:36ea;
 allow 2a12:1e01::2;
 allow 2a12:5940:13e2::2;
@@ -1438,8 +1377,10 @@ allow 2a12:8641:3:38::;
 allow 2a12:a800:2:1:45:138:16:203;
 allow 31.129.22.65;
 allow 31.13.189.118;
+allow 31.220.87.46;
 allow 31.220.98.139;
 allow 31.42.185.227;
+allow 34.229.26.187;
 allow 35.0.127.52;
 allow 37.120.166.23;
 allow 37.187.5.192;
@@ -1447,6 +1388,7 @@ allow 37.228.129.128;
 allow 37.228.129.131;
 allow 37.228.129.24;
 allow 37.228.129.63;
+allow 37.252.255.135;
 allow 37.48.120.196;
 allow 37.48.70.156;
 allow 38.242.239.62;
@@ -1556,6 +1498,7 @@ allow 51.89.153.112;
 allow 5.196.8.113;
 allow 5.196.95.34;
 allow 5.255.100.219;
+allow 5.255.100.26;
 allow 5.255.101.10;
 allow 5.255.101.131;
 allow 5.255.103.190;
@@ -1583,7 +1526,6 @@ allow 5.255.99.5;
 allow 5.2.67.226;
 allow 5.2.79.179;
 allow 5.2.79.190;
-allow 52.86.70.11;
 allow 54.224.79.94;
 allow 5.42.66.6;
 allow 5.42.80.232;
@@ -1706,6 +1648,7 @@ allow 91.208.75.239;
 allow 91.208.75.3;
 allow 91.208.75.4;
 allow 91.210.59.57;
+allow 91.219.236.101;
 allow 91.219.237.56;
 allow 91.219.239.166;
 allow 91.92.109.126;
