--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -253,6 +253,7 @@ allow 2a00:1169:117:5510::;
 allow 2a00:1169:119:b120::;
 allow 2a00:1169:11f:5200::;
 allow 2a00:1169:11f:d680::;
+allow 2a00:11c0:1c:311::5;
 allow 2a00:11c0:1f:1::55;
 allow 2a00:1728:f:f:f:f:1d1f:b701;
 allow 2a00:1728:f:f:f:f:c03c:9898;
@@ -499,41 +500,9 @@ allow 2a0b:f4c2::20;
 allow 2a0b:f4c2::21;
 allow 2a0b:f4c2::22;
 allow 2a0b:f4c2::23;
-allow 2a0b:f4c2:2::32;
-allow 2a0b:f4c2:2::33;
-allow 2a0b:f4c2:2::34;
-allow 2a0b:f4c2:2::35;
-allow 2a0b:f4c2:2::36;
-allow 2a0b:f4c2:2::37;
-allow 2a0b:f4c2:2::38;
-allow 2a0b:f4c2:2::39;
 allow 2a0b:f4c2::24;
-allow 2a0b:f4c2:2::40;
-allow 2a0b:f4c2:2::41;
-allow 2a0b:f4c2:2::42;
-allow 2a0b:f4c2:2::43;
-allow 2a0b:f4c2:2::44;
-allow 2a0b:f4c2:2::45;
-allow 2a0b:f4c2:2::46;
-allow 2a0b:f4c2:2::47;
-allow 2a0b:f4c2:2::48;
-allow 2a0b:f4c2:2::49;
 allow 2a0b:f4c2::25;
-allow 2a0b:f4c2:2::50;
-allow 2a0b:f4c2:2::51;
-allow 2a0b:f4c2:2::52;
-allow 2a0b:f4c2:2::53;
-allow 2a0b:f4c2:2::54;
-allow 2a0b:f4c2:2::55;
-allow 2a0b:f4c2:2::56;
-allow 2a0b:f4c2:2::57;
-allow 2a0b:f4c2:2::58;
-allow 2a0b:f4c2:2::59;
 allow 2a0b:f4c2::26;
-allow 2a0b:f4c2:2::60;
-allow 2a0b:f4c2:2::61;
-allow 2a0b:f4c2:2::62;
-allow 2a0b:f4c2:2::63;
 allow 2a0b:f4c2::27;
 allow 2a0b:f4c2::28;
 allow 2a0b:f4c2::29;
@@ -614,6 +583,7 @@ allow 2a0f:df00:0:255::206;
 allow 2a0f:e586:f:f::133;
 allow 2a0f:e586:f:f::182;
 allow 2a10:8a40:f313::29;
+allow 2a10:c800:1:9cc6::1;
 allow 2a11:6100:0:22:a236:9fff:fe9e:36ea;
 allow 2a12:1e01::2;
 allow 2a12:5940:13e2::2;
