--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -118,6 +118,7 @@ deny 128.31.0.13;
 deny 130.193.10.21;
 deny 130.193.15.186;
 deny 130.193.15.79;
+deny 130.204.161.3;
 deny 135.125.205.25;
 deny 135.125.55.237;
 deny 136.244.111.163;
@@ -417,41 +418,9 @@ deny 185.220.101.29;
 deny 185.220.101.3;
 deny 185.220.101.30;
 deny 185.220.101.31;
-deny 185.220.101.32;
-deny 185.220.101.33;
-deny 185.220.101.34;
-deny 185.220.101.35;
-deny 185.220.101.36;
-deny 185.220.101.37;
-deny 185.220.101.38;
-deny 185.220.101.39;
 deny 185.220.101.4;
-deny 185.220.101.40;
-deny 185.220.101.41;
-deny 185.220.101.42;
-deny 185.220.101.43;
-deny 185.220.101.44;
-deny 185.220.101.45;
-deny 185.220.101.46;
-deny 185.220.101.47;
-deny 185.220.101.48;
-deny 185.220.101.49;
 deny 185.220.101.5;
-deny 185.220.101.50;
-deny 185.220.101.51;
-deny 185.220.101.52;
-deny 185.220.101.53;
-deny 185.220.101.54;
-deny 185.220.101.55;
-deny 185.220.101.56;
-deny 185.220.101.57;
-deny 185.220.101.58;
-deny 185.220.101.59;
 deny 185.220.101.6;
-deny 185.220.101.60;
-deny 185.220.101.61;
-deny 185.220.101.62;
-deny 185.220.101.63;
 deny 185.220.101.64;
 deny 185.220.101.65;
 deny 185.220.101.66;
@@ -1055,6 +1024,7 @@ deny 2a00:1169:117:5510::;
 deny 2a00:1169:119:b120::;
 deny 2a00:1169:11f:5200::;
 deny 2a00:1169:11f:d680::;
+deny 2a00:11c0:1c:311::5;
 deny 2a00:11c0:1f:1::55;
 deny 2a00:1728:f:f:f:f:1d1f:b701;
 deny 2a00:1728:f:f:f:f:c03c:9898;
@@ -1301,41 +1271,9 @@ deny 2a0b:f4c2::20;
 deny 2a0b:f4c2::21;
 deny 2a0b:f4c2::22;
 deny 2a0b:f4c2::23;
-deny 2a0b:f4c2:2::32;
-deny 2a0b:f4c2:2::33;
-deny 2a0b:f4c2:2::34;
-deny 2a0b:f4c2:2::35;
-deny 2a0b:f4c2:2::36;
-deny 2a0b:f4c2:2::37;
-deny 2a0b:f4c2:2::38;
-deny 2a0b:f4c2:2::39;
 deny 2a0b:f4c2::24;
-deny 2a0b:f4c2:2::40;
-deny 2a0b:f4c2:2::41;
-deny 2a0b:f4c2:2::42;
-deny 2a0b:f4c2:2::43;
-deny 2a0b:f4c2:2::44;
-deny 2a0b:f4c2:2::45;
-deny 2a0b:f4c2:2::46;
-deny 2a0b:f4c2:2::47;
-deny 2a0b:f4c2:2::48;
-deny 2a0b:f4c2:2::49;
 deny 2a0b:f4c2::25;
-deny 2a0b:f4c2:2::50;
-deny 2a0b:f4c2:2::51;
-deny 2a0b:f4c2:2::52;
-deny 2a0b:f4c2:2::53;
-deny 2a0b:f4c2:2::54;
-deny 2a0b:f4c2:2::55;
-deny 2a0b:f4c2:2::56;
-deny 2a0b:f4c2:2::57;
-deny 2a0b:f4c2:2::58;
-deny 2a0b:f4c2:2::59;
 deny 2a0b:f4c2::26;
-deny 2a0b:f4c2:2::60;
-deny 2a0b:f4c2:2::61;
-deny 2a0b:f4c2:2::62;
-deny 2a0b:f4c2:2::63;
 deny 2a0b:f4c2::27;
 deny 2a0b:f4c2::28;
 deny 2a0b:f4c2::29;
@@ -1416,6 +1354,7 @@ deny 2a0f:df00:0:255::206;
 deny 2a0f:e586:f:f::133;
 deny 2a0f:e586:f:f::182;
 deny 2a10:8a40:f313::29;
+deny 2a10:c800:1:9cc6::1;
 deny 2a11:6100:0:22:a236:9fff:fe9e:36ea;
 deny 2a12:1e01::2;
 deny 2a12:5940:13e2::2;
@@ -1438,8 +1377,10 @@ deny 2a12:8641:3:38::;
 deny 2a12:a800:2:1:45:138:16:203;
 deny 31.129.22.65;
 deny 31.13.189.118;
+deny 31.220.87.46;
 deny 31.220.98.139;
 deny 31.42.185.227;
+deny 34.229.26.187;
 deny 35.0.127.52;
 deny 37.120.166.23;
 deny 37.187.5.192;
@@ -1447,6 +1388,7 @@ deny 37.228.129.128;
 deny 37.228.129.131;
 deny 37.228.129.24;
 deny 37.228.129.63;
+deny 37.252.255.135;
 deny 37.48.120.196;
 deny 37.48.70.156;
 deny 38.242.239.62;
@@ -1556,6 +1498,7 @@ deny 51.89.153.112;
 deny 5.196.8.113;
 deny 5.196.95.34;
 deny 5.255.100.219;
+deny 5.255.100.26;
 deny 5.255.101.10;
 deny 5.255.101.131;
 deny 5.255.103.190;
@@ -1583,7 +1526,6 @@ deny 5.255.99.5;
 deny 5.2.67.226;
 deny 5.2.79.179;
 deny 5.2.79.190;
-deny 52.86.70.11;
 deny 54.224.79.94;
 deny 5.42.66.6;
 deny 5.42.80.232;
@@ -1706,6 +1648,7 @@ deny 91.208.75.239;
 deny 91.208.75.3;
 deny 91.208.75.4;
 deny 91.210.59.57;
+deny 91.219.236.101;
 deny 91.219.237.56;
 deny 91.219.239.166;
 deny 91.92.109.126;
