--- a/set_real_ip_from-tor_ips_v6.conf
+++ b/set_real_ip_from-tor_ips_v6.conf
@@ -253,6 +253,7 @@ set_real_ip_from 2a00:1169:117:5510::;
 set_real_ip_from 2a00:1169:119:b120::;
 set_real_ip_from 2a00:1169:11f:5200::;
 set_real_ip_from 2a00:1169:11f:d680::;
+set_real_ip_from 2a00:11c0:1c:311::5;
 set_real_ip_from 2a00:11c0:1f:1::55;
 set_real_ip_from 2a00:1728:f:f:f:f:1d1f:b701;
 set_real_ip_from 2a00:1728:f:f:f:f:c03c:9898;
@@ -499,41 +500,9 @@ set_real_ip_from 2a0b:f4c2::20;
 set_real_ip_from 2a0b:f4c2::21;
 set_real_ip_from 2a0b:f4c2::22;
 set_real_ip_from 2a0b:f4c2::23;
-set_real_ip_from 2a0b:f4c2:2::32;
-set_real_ip_from 2a0b:f4c2:2::33;
-set_real_ip_from 2a0b:f4c2:2::34;
-set_real_ip_from 2a0b:f4c2:2::35;
-set_real_ip_from 2a0b:f4c2:2::36;
-set_real_ip_from 2a0b:f4c2:2::37;
-set_real_ip_from 2a0b:f4c2:2::38;
-set_real_ip_from 2a0b:f4c2:2::39;
 set_real_ip_from 2a0b:f4c2::24;
-set_real_ip_from 2a0b:f4c2:2::40;
-set_real_ip_from 2a0b:f4c2:2::41;
-set_real_ip_from 2a0b:f4c2:2::42;
-set_real_ip_from 2a0b:f4c2:2::43;
-set_real_ip_from 2a0b:f4c2:2::44;
-set_real_ip_from 2a0b:f4c2:2::45;
-set_real_ip_from 2a0b:f4c2:2::46;
-set_real_ip_from 2a0b:f4c2:2::47;
-set_real_ip_from 2a0b:f4c2:2::48;
-set_real_ip_from 2a0b:f4c2:2::49;
 set_real_ip_from 2a0b:f4c2::25;
-set_real_ip_from 2a0b:f4c2:2::50;
-set_real_ip_from 2a0b:f4c2:2::51;
-set_real_ip_from 2a0b:f4c2:2::52;
-set_real_ip_from 2a0b:f4c2:2::53;
-set_real_ip_from 2a0b:f4c2:2::54;
-set_real_ip_from 2a0b:f4c2:2::55;
-set_real_ip_from 2a0b:f4c2:2::56;
-set_real_ip_from 2a0b:f4c2:2::57;
-set_real_ip_from 2a0b:f4c2:2::58;
-set_real_ip_from 2a0b:f4c2:2::59;
 set_real_ip_from 2a0b:f4c2::26;
-set_real_ip_from 2a0b:f4c2:2::60;
-set_real_ip_from 2a0b:f4c2:2::61;
-set_real_ip_from 2a0b:f4c2:2::62;
-set_real_ip_from 2a0b:f4c2:2::63;
 set_real_ip_from 2a0b:f4c2::27;
 set_real_ip_from 2a0b:f4c2::28;
 set_real_ip_from 2a0b:f4c2::29;
@@ -614,6 +583,7 @@ set_real_ip_from 2a0f:df00:0:255::206;
 set_real_ip_from 2a0f:e586:f:f::133;
 set_real_ip_from 2a0f:e586:f:f::182;
 set_real_ip_from 2a10:8a40:f313::29;
+set_real_ip_from 2a10:c800:1:9cc6::1;
 set_real_ip_from 2a11:6100:0:22:a236:9fff:fe9e:36ea;
 set_real_ip_from 2a12:1e01::2;
 set_real_ip_from 2a12:5940:13e2::2;
