--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -110,6 +110,7 @@ set_real_ip_from 109.70.100.69;
 set_real_ip_from 109.70.100.70;
 set_real_ip_from 109.70.100.71;
 set_real_ip_from 114.199.75.111;
+set_real_ip_from 118.163.74.160;
 set_real_ip_from 124.217.247.210;
 set_real_ip_from 125.212.241.131;
 set_real_ip_from 128.127.180.156;
@@ -706,7 +707,6 @@ set_real_ip_from 2001:678:e3c::a;
 set_real_ip_from 2001:678:e3c::b;
 set_real_ip_from 2001:678:e3c::c;
 set_real_ip_from 2001:678:e3c::d;
-set_real_ip_from 2001:67c:2044:1905::26;
 set_real_ip_from 2001:67c:2608::1;
 set_real_ip_from 2001:67c:289c::20;
 set_real_ip_from 2001:67c:289c:2::234;
@@ -785,6 +785,7 @@ set_real_ip_from 2001:67c:89c:702:1ce:1ce:babe:7;
 set_real_ip_from 2001:67c:89c:702:1ce:1ce:babe:8;
 set_real_ip_from 2001:67c:89c:702:1ce:1ce:babe:9;
 set_real_ip_from 2001:910:1400:107::2;
+set_real_ip_from 2001:b030:2422::7234;
 set_real_ip_from 2001:bc8:1201:608:46a8:42ff:fe3d:2743;
 set_real_ip_from 2001:bc8:1600:472a::1;
 set_real_ip_from 2001:bc8:634:2177::1;
@@ -1352,7 +1353,6 @@ set_real_ip_from 2a0f:df00:0:255::206;
 set_real_ip_from 2a0f:e586:f:f::133;
 set_real_ip_from 2a0f:e586:f:f::182;
 set_real_ip_from 2a10:8a40:f313::29;
-set_real_ip_from 2a10:c800:1:9cc6::1;
 set_real_ip_from 2a11:6100:0:22:a236:9fff:fe9e:36ea;
 set_real_ip_from 2a12:1e01::2;
 set_real_ip_from 2a12:5940:13e2::2;
@@ -1375,8 +1375,10 @@ set_real_ip_from 2a12:8641:3:38::;
 set_real_ip_from 2a12:a800:2:1:45:138:16:203;
 set_real_ip_from 31.129.22.65;
 set_real_ip_from 31.13.189.118;
+set_real_ip_from 31.220.87.46;
 set_real_ip_from 31.220.98.139;
 set_real_ip_from 31.42.185.227;
+set_real_ip_from 3.209.246.117;
 set_real_ip_from 35.0.127.52;
 set_real_ip_from 37.120.166.23;
 set_real_ip_from 37.187.5.192;
@@ -1389,7 +1391,6 @@ set_real_ip_from 37.48.120.196;
 set_real_ip_from 37.48.70.156;
 set_real_ip_from 38.242.239.62;
 set_real_ip_from 38.97.116.244;
-set_real_ip_from 44.214.208.153;
 set_real_ip_from 45.128.232.102;
 set_real_ip_from 45.128.232.170;
 set_real_ip_from 45.132.246.245;
@@ -1636,7 +1637,6 @@ set_real_ip_from 91.193.18.63;
 set_real_ip_from 91.203.144.194;
 set_real_ip_from 91.203.5.115;
 set_real_ip_from 91.203.5.118;
-set_real_ip_from 91.206.26.26;
 set_real_ip_from 91.208.197.144;
 set_real_ip_from 91.208.75.153;
 set_real_ip_from 91.208.75.156;
@@ -1645,7 +1645,6 @@ set_real_ip_from 91.208.75.239;
 set_real_ip_from 91.208.75.3;
 set_real_ip_from 91.208.75.4;
 set_real_ip_from 91.210.59.57;
-set_real_ip_from 91.219.236.101;
 set_real_ip_from 91.219.237.56;
 set_real_ip_from 91.219.239.166;
 set_real_ip_from 91.92.109.126;
