--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -111,6 +111,7 @@ allow 109.70.100.69;
 allow 109.70.100.70;
 allow 109.70.100.71;
 allow 114.199.75.111;
+allow 118.163.74.160;
 allow 124.217.247.210;
 allow 125.212.241.131;
 allow 128.127.180.156;
@@ -155,9 +156,12 @@ allow 160.119.249.240;
 allow 161.35.129.51;
 allow 162.241.121.139;
 allow 162.247.72.192;
+allow 162.247.72.199;
 allow 162.247.74.200;
 allow 162.247.74.201;
+allow 162.247.74.202;
 allow 162.247.74.204;
+allow 162.247.74.206;
 allow 162.247.74.213;
 allow 162.247.74.216;
 allow 162.247.74.217;
@@ -456,6 +460,7 @@ allow 185.220.103.5;
 allow 185.220.103.6;
 allow 185.220.103.7;
 allow 185.220.103.8;
+allow 185.220.103.9;
 allow 185.225.226.77;
 allow 185.225.69.203;
 allow 185.225.69.232;
@@ -700,7 +705,6 @@ allow 2001:678:e3c::a;
 allow 2001:678:e3c::b;
 allow 2001:678:e3c::c;
 allow 2001:678:e3c::d;
-allow 2001:67c:2044:1905::26;
 allow 2001:67c:2608::1;
 allow 2001:67c:289c::20;
 allow 2001:67c:289c:2::234;
@@ -779,6 +783,7 @@ allow 2001:67c:89c:702:1ce:1ce:babe:7;
 allow 2001:67c:89c:702:1ce:1ce:babe:8;
 allow 2001:67c:89c:702:1ce:1ce:babe:9;
 allow 2001:910:1400:107::2;
+allow 2001:b030:2422::7234;
 allow 2001:bc8:1201:608:46a8:42ff:fe3d:2743;
 allow 2001:bc8:1600:472a::1;
 allow 2001:bc8:634:2177::1;
@@ -905,6 +910,7 @@ allow 2602:fc24:18:1c54::1;
 allow 2602:fccf:310:1::a;
 allow 2602:fccf:310:1::b;
 allow 2602:fccf:310:1::c;
+allow 2602:fef9:100:1100::199;
 allow 2603:3:6106:2460::;
 allow 2603:3:6107:47a0::;
 allow 2603:3:610a:5050::;
@@ -1384,7 +1390,6 @@ allow 37.48.120.196;
 allow 37.48.70.156;
 allow 38.242.239.62;
 allow 38.97.116.244;
-allow 44.219.230.38;
 allow 45.128.232.102;
 allow 45.128.232.170;
 allow 45.132.246.245;
@@ -1513,6 +1518,7 @@ allow 5.255.99.124;
 allow 5.255.99.147;
 allow 5.255.99.5;
 allow 5.2.67.226;
+allow 52.7.29.87;
 allow 5.2.79.179;
 allow 5.2.79.190;
 allow 54.224.79.94;
@@ -1631,7 +1637,6 @@ allow 91.193.18.63;
 allow 91.203.144.194;
 allow 91.203.5.115;
 allow 91.203.5.118;
-allow 91.206.26.26;
 allow 91.208.197.144;
 allow 91.208.75.153;
 allow 91.208.75.156;
