--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -32,7 +32,6 @@ deny 2001:678:e3c::a;
 deny 2001:678:e3c::b;
 deny 2001:678:e3c::c;
 deny 2001:678:e3c::d;
-deny 2001:67c:2044:1905::26;
 deny 2001:67c:2608::1;
 deny 2001:67c:289c::20;
 deny 2001:67c:289c:2::234;
@@ -111,6 +110,7 @@ deny 2001:67c:89c:702:1ce:1ce:babe:7;
 deny 2001:67c:89c:702:1ce:1ce:babe:8;
 deny 2001:67c:89c:702:1ce:1ce:babe:9;
 deny 2001:910:1400:107::2;
+deny 2001:b030:2422::7234;
 deny 2001:bc8:1201:608:46a8:42ff:fe3d:2743;
 deny 2001:bc8:1600:472a::1;
 deny 2001:bc8:634:2177::1;
@@ -140,6 +140,7 @@ deny 2602:fc24:18:1c54::1;
 deny 2602:fccf:310:1::a;
 deny 2602:fccf:310:1::b;
 deny 2602:fccf:310:1::c;
+deny 2602:fef9:100:1100::199;
 deny 2603:3:6106:2460::;
 deny 2603:3:6107:47a0::;
 deny 2603:3:610a:5050::;
