--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -111,7 +111,6 @@ allow 109.70.100.69;
 allow 109.70.100.70;
 allow 109.70.100.71;
 allow 114.199.75.111;
-allow 118.163.74.160;
 allow 124.217.247.210;
 allow 125.212.241.131;
 allow 128.127.180.156;
@@ -643,7 +642,6 @@ allow 195.80.151.30;
 allow 195.88.74.206;
 allow 196.189.30.114;
 allow 198.144.178.163;
-allow 198.167.193.169;
 allow 198.23.133.132;
 allow 198.251.84.163;
 allow 198.251.84.237;
@@ -695,6 +693,7 @@ allow 2001:41d0:a:5c0::1;
 allow 2001:41d0:a:fe22::1;
 allow 2001:470:1:908::9001;
 allow 2001:4b20:12:f001::105;
+allow 2001:4b98:dc0:43:f816:3eff:fe5f:cf14;
 allow 2001:4b98:dc0:47:216:3eff:fe3d:888c;
 allow 2001:620:20d0::19;
 allow 2001:620:20d0::20;
@@ -705,6 +704,7 @@ allow 2001:678:e3c::a;
 allow 2001:678:e3c::b;
 allow 2001:678:e3c::c;
 allow 2001:678:e3c::d;
+allow 2001:67c:2044:1905::26;
 allow 2001:67c:2608::1;
 allow 2001:67c:289c::20;
 allow 2001:67c:289c:2::234;
@@ -783,7 +783,6 @@ allow 2001:67c:89c:702:1ce:1ce:babe:7;
 allow 2001:67c:89c:702:1ce:1ce:babe:8;
 allow 2001:67c:89c:702:1ce:1ce:babe:9;
 allow 2001:910:1400:107::2;
-allow 2001:b030:2422::7234;
 allow 2001:bc8:1201:608:46a8:42ff:fe3d:2743;
 allow 2001:bc8:1600:472a::1;
 allow 2001:bc8:634:2177::1;
@@ -1353,6 +1352,7 @@ allow 2a0f:e586:f:f::133;
 allow 2a0f:e586:f:f::182;
 allow 2a10:1fc0:3::4289:69b8;
 allow 2a10:8a40:f313::29;
+allow 2a10:c800:1:9cc6::1;
 allow 2a11:6100:0:22:a236:9fff:fe9e:36ea;
 allow 2a12:1e01::2;
 allow 2a12:5940:13e2::2;
@@ -1390,6 +1390,7 @@ allow 37.48.120.196;
 allow 37.48.70.156;
 allow 38.242.239.62;
 allow 38.97.116.244;
+allow 44.195.63.96;
 allow 45.128.232.102;
 allow 45.128.232.170;
 allow 45.132.246.245;
@@ -1460,11 +1461,6 @@ allow 45.95.169.255;
 allow 45.95.169.99;
 allow 46.166.139.111;
 allow 46.182.21.248;
-allow 46.183.222.180;
-allow 46.183.222.181;
-allow 46.183.222.183;
-allow 46.183.222.184;
-allow 46.183.222.185;
 allow 46.226.164.14;
 allow 46.232.251.191;
 allow 46.234.47.105;
@@ -1493,6 +1489,7 @@ allow 51.89.153.112;
 allow 5.196.8.113;
 allow 5.196.95.34;
 allow 5.255.100.219;
+allow 5.255.100.26;
 allow 5.255.101.10;
 allow 5.255.101.131;
 allow 5.255.103.190;
@@ -1518,7 +1515,6 @@ allow 5.255.99.124;
 allow 5.255.99.147;
 allow 5.255.99.5;
 allow 5.2.67.226;
-allow 52.7.29.87;
 allow 5.2.79.179;
 allow 5.2.79.190;
 allow 54.224.79.94;
@@ -1589,6 +1585,7 @@ allow 83.96.213.63;
 allow 83.97.20.77;
 allow 83.97.79.150;
 allow 84.16.224.227;
+allow 84.19.182.20;
 allow 84.211.225.54;
 allow 84.239.46.144;
 allow 84.247.165.51;
@@ -1637,6 +1634,7 @@ allow 91.193.18.63;
 allow 91.203.144.194;
 allow 91.203.5.115;
 allow 91.203.5.118;
+allow 91.206.26.26;
 allow 91.208.197.144;
 allow 91.208.75.153;
 allow 91.208.75.156;
@@ -1645,6 +1643,7 @@ allow 91.208.75.239;
 allow 91.208.75.3;
 allow 91.208.75.4;
 allow 91.210.59.57;
+allow 91.219.236.101;
 allow 91.219.237.56;
 allow 91.219.239.166;
 allow 91.92.109.126;
@@ -1654,6 +1653,7 @@ allow 92.205.163.226;
 allow 92.205.185.52;
 allow 92.205.237.227;
 allow 92.205.31.137;
+allow 92.243.24.163;
 allow 92.246.84.133;
 allow 93.123.12.112;
 allow 93.243.56.177;
