Update lists at 20240225-0601

--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -112,6 +112,7 @@ deny 2001:67c:89c:702:1ce:1ce:babe:7;
 deny 2001:67c:89c:702:1ce:1ce:babe:8;
 deny 2001:67c:89c:702:1ce:1ce:babe:9;
 deny 2001:910:1400:107::2;
+deny 2001:b030:2422::7234;
 deny 2001:bc8:1201:608:46a8:42ff:fe3d:2743;
 deny 2001:bc8:1600:472a::1;
 deny 2001:bc8:634:2177::1;
@@ -231,7 +232,6 @@ deny 2605:6400:30:fa92:5f11:1ed9:9615:fcc6;
 deny 2605:6400:30:fdd8::2;
 deny 2605:6400:40:fe09::2;
 deny 2605:6400:d814:1b8::4;
-deny 2605:6400:d814:484f::;
 deny 2605:6400:d814:5125::;
 deny 2605:aa80:0:9::3;
 deny 2605:aa80:c007:6b3::1;
