--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -111,6 +111,7 @@ set_real_ip_from 109.70.100.69;
 set_real_ip_from 109.70.100.70;
 set_real_ip_from 109.70.100.71;
 set_real_ip_from 114.199.75.111;
+set_real_ip_from 118.163.74.160;
 set_real_ip_from 124.217.247.210;
 set_real_ip_from 125.212.241.131;
 set_real_ip_from 128.127.180.156;
@@ -133,7 +134,6 @@ set_real_ip_from 143.42.199.223;
 set_real_ip_from 144.172.118.4;
 set_real_ip_from 144.172.118.41;
 set_real_ip_from 144.172.118.57;
-set_real_ip_from 144.172.118.62;
 set_real_ip_from 144.172.73.11;
 set_real_ip_from 144.172.73.13;
 set_real_ip_from 144.172.73.6;
@@ -783,6 +783,7 @@ set_real_ip_from 2001:67c:89c:702:1ce:1ce:babe:7;
 set_real_ip_from 2001:67c:89c:702:1ce:1ce:babe:8;
 set_real_ip_from 2001:67c:89c:702:1ce:1ce:babe:9;
 set_real_ip_from 2001:910:1400:107::2;
+set_real_ip_from 2001:b030:2422::7234;
 set_real_ip_from 2001:bc8:1201:608:46a8:42ff:fe3d:2743;
 set_real_ip_from 2001:bc8:1600:472a::1;
 set_real_ip_from 2001:bc8:634:2177::1;
@@ -999,7 +1000,6 @@ set_real_ip_from 2605:6400:30:fa92:5f11:1ed9:9615:fcc6;
 set_real_ip_from 2605:6400:30:fdd8::2;
 set_real_ip_from 2605:6400:40:fe09::2;
 set_real_ip_from 2605:6400:d814:1b8::4;
-set_real_ip_from 2605:6400:d814:484f::;
 set_real_ip_from 2605:6400:d814:5125::;
 set_real_ip_from 2605:aa80:0:9::3;
 set_real_ip_from 2605:aa80:c007:6b3::1;
@@ -1378,6 +1378,7 @@ set_real_ip_from 31.13.189.118;
 set_real_ip_from 31.220.87.46;
 set_real_ip_from 31.220.98.139;
 set_real_ip_from 31.42.185.227;
+set_real_ip_from 3.210.82.196;
 set_real_ip_from 35.0.127.52;
 set_real_ip_from 37.120.166.23;
 set_real_ip_from 37.187.5.192;
@@ -1390,7 +1391,6 @@ set_real_ip_from 37.48.120.196;
 set_real_ip_from 37.48.70.156;
 set_real_ip_from 38.242.239.62;
 set_real_ip_from 38.97.116.244;
-set_real_ip_from 44.195.63.96;
 set_real_ip_from 45.128.232.102;
 set_real_ip_from 45.128.232.170;
 set_real_ip_from 45.132.246.245;
@@ -1528,6 +1528,7 @@ set_real_ip_from 54.36.101.21;
 set_real_ip_from 5.45.102.93;
 set_real_ip_from 5.45.104.176;
 set_real_ip_from 5.45.98.162;
+set_real_ip_from 5.61.51.143;
 set_real_ip_from 5.79.66.19;
 set_real_ip_from 62.133.45.2;
 set_real_ip_from 62.171.137.169;
