--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -111,6 +111,7 @@ allow 109.70.100.69;
 allow 109.70.100.70;
 allow 109.70.100.71;
 allow 114.199.75.111;
+allow 118.163.74.160;
 allow 124.217.247.210;
 allow 125.212.241.131;
 allow 128.127.180.156;
@@ -133,7 +134,6 @@ allow 143.42.199.223;
 allow 144.172.118.4;
 allow 144.172.118.41;
 allow 144.172.118.57;
-allow 144.172.118.62;
 allow 144.172.73.11;
 allow 144.172.73.13;
 allow 144.172.73.6;
@@ -783,6 +783,7 @@ allow 2001:67c:89c:702:1ce:1ce:babe:7;
 allow 2001:67c:89c:702:1ce:1ce:babe:8;
 allow 2001:67c:89c:702:1ce:1ce:babe:9;
 allow 2001:910:1400:107::2;
+allow 2001:b030:2422::7234;
 allow 2001:bc8:1201:608:46a8:42ff:fe3d:2743;
 allow 2001:bc8:1600:472a::1;
 allow 2001:bc8:634:2177::1;
@@ -999,7 +1000,6 @@ allow 2605:6400:30:fa92:5f11:1ed9:9615:fcc6;
 allow 2605:6400:30:fdd8::2;
 allow 2605:6400:40:fe09::2;
 allow 2605:6400:d814:1b8::4;
-allow 2605:6400:d814:484f::;
 allow 2605:6400:d814:5125::;
 allow 2605:aa80:0:9::3;
 allow 2605:aa80:c007:6b3::1;
@@ -1378,6 +1378,7 @@ allow 31.13.189.118;
 allow 31.220.87.46;
 allow 31.220.98.139;
 allow 31.42.185.227;
+allow 3.210.82.196;
 allow 35.0.127.52;
 allow 37.120.166.23;
 allow 37.187.5.192;
@@ -1390,7 +1391,6 @@ allow 37.48.120.196;
 allow 37.48.70.156;
 allow 38.242.239.62;
 allow 38.97.116.244;
-allow 44.195.63.96;
 allow 45.128.232.102;
 allow 45.128.232.170;
 allow 45.132.246.245;
@@ -1528,6 +1528,7 @@ allow 54.36.101.21;
 allow 5.45.102.93;
 allow 5.45.104.176;
 allow 5.45.98.162;
+allow 5.61.51.143;
 allow 5.79.66.19;
 allow 62.133.45.2;
 allow 62.171.137.169;
