--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -213,7 +213,7 @@ allow 178.218.144.51;
 allow 178.218.144.99;
 allow 178.236.237.23;
 allow 178.236.247.122;
-allow 178.31.104.79;
+allow 178.31.135.66;
 allow 179.43.128.16;
 allow 179.43.134.18;
 allow 179.43.159.194;
@@ -510,7 +510,6 @@ allow 185.56.171.94;
 allow 185.56.83.83;
 allow 185.67.82.114;
 allow 185.70.8.45;
-allow 185.70.8.46;
 allow 185.7.33.146;
 allow 185.82.127.128;
 allow 185.82.219.109;
@@ -704,6 +703,7 @@ allow 2001:678:e3c::a;
 allow 2001:678:e3c::b;
 allow 2001:678:e3c::c;
 allow 2001:678:e3c::d;
+allow 2001:67c:2044:1905::26;
 allow 2001:67c:2608::1;
 allow 2001:67c:289c::20;
 allow 2001:67c:289c:2::234;
@@ -817,6 +817,7 @@ allow 209.141.55.26;
 allow 209.141.59.116;
 allow 209.141.62.71;
 allow 212.21.66.6;
+allow 212.51.128.10;
 allow 212.69.167.80;
 allow 212.73.134.204;
 allow 212.95.50.77;
@@ -920,6 +921,7 @@ allow 2604:6600:0:42::2;
 allow 2604:b480:3:6::2;
 allow 2605:2700:0:2:a800:ff:fe39:574;
 allow 2605:2700:0:2:a800:ff:fe47:e25f;
+allow 2605:6400:10:1008:1111:1111:1111:1111;
 allow 2605:6400:10:1060:411f:41d8:11fe:716f;
 allow 2605:6400:10:12b:1877:e308:72b3:41b0;
 allow 2605:6400:10:1362::2;
@@ -1137,7 +1139,6 @@ allow 2a04:52c0:130:896e::1;
 allow 2a04:52c0:130:d285::1;
 allow 2a04:9dc0:31::c0cc:4d;
 allow 2a05:26c0:d1:12:acdc:feed:beef:66;
-allow 2a05:26c0:d1:12:acdc:feed:beef:99;
 allow 2a05:541:110:20::1;
 allow 2a05:541:110:3e::1;
 allow 2a05:541:112:31::1;
@@ -1351,7 +1352,6 @@ allow 2a0f:e586:f:f::133;
 allow 2a0f:e586:f:f::182;
 allow 2a10:1fc0:3::4289:69b8;
 allow 2a10:8a40:f313::29;
-allow 2a10:c800:1:9cc6::1;
 allow 2a11:6100:0:22:a236:9fff:fe9e:36ea;
 allow 2a12:1e01::2;
 allow 2a12:5940:13e2::2;
@@ -1389,7 +1389,6 @@ allow 37.48.120.196;
 allow 37.48.70.156;
 allow 38.242.239.62;
 allow 38.97.116.244;
-allow 44.192.0.126;
 allow 45.128.232.102;
 allow 45.128.232.170;
 allow 45.132.246.245;
@@ -1488,7 +1487,6 @@ allow 51.89.153.112;
 allow 5.196.8.113;
 allow 5.196.95.34;
 allow 5.255.100.219;
-allow 5.255.100.26;
 allow 5.255.101.10;
 allow 5.255.101.131;
 allow 5.255.103.190;
@@ -1634,6 +1632,7 @@ allow 91.193.18.63;
 allow 91.203.144.194;
 allow 91.203.5.115;
 allow 91.203.5.118;
+allow 91.206.26.26;
 allow 91.208.197.144;
 allow 91.208.75.153;
 allow 91.208.75.156;
@@ -1642,7 +1641,6 @@ allow 91.208.75.239;
 allow 91.208.75.3;
 allow 91.208.75.4;
 allow 91.210.59.57;
-allow 91.219.236.101;
 allow 91.219.237.56;
 allow 91.219.239.166;
 allow 91.92.109.126;
