--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -213,7 +213,6 @@ allow 178.218.144.51;
 allow 178.218.144.99;
 allow 178.236.237.23;
 allow 178.236.247.122;
-allow 178.31.135.66;
 allow 179.43.128.16;
 allow 179.43.134.18;
 allow 179.43.159.194;
@@ -704,7 +703,6 @@ allow 2001:678:e3c::a;
 allow 2001:678:e3c::b;
 allow 2001:678:e3c::c;
 allow 2001:678:e3c::d;
-allow 2001:67c:2044:1905::26;
 allow 2001:67c:2608::1;
 allow 2001:67c:289c::20;
 allow 2001:67c:289c:2::234;
@@ -888,7 +886,7 @@ allow 2.58.95.45;
 allow 2.58.95.47;
 allow 2.58.95.53;
 allow 2.58.95.59;
-allow 2600:3c00:e000:4ee::2;
+allow 2600:3c00:e000:4ee::1;
 allow 2600:3c00::f03c:91ff:fe96:1cd9;
 allow 2600:3c03:e000:fa::2;
 allow 2602:2e5::104;
@@ -1162,6 +1160,7 @@ allow 2a06:1700:1::11;
 allow 2a06:1700:1:1a::1;
 allow 2a06:1700:1:2a::7;
 allow 2a06:1700:3:19::1;
+allow 2a06:1700:4:14::1;
 allow 2a06:d380:0:103::62;
 allow 2a06:d380:0:103::63;
 allow 2a06:e80:3000:1:bad:babe:ca11:911;
@@ -1388,7 +1387,6 @@ allow 37.252.255.135;
 allow 37.48.120.196;
 allow 37.48.120.64;
 allow 37.48.70.156;
-allow 38.242.239.62;
 allow 38.97.116.244;
 allow 45.128.232.102;
 allow 45.128.232.170;
@@ -1435,7 +1433,6 @@ allow 45.66.35.10;
 allow 45.66.35.20;
 allow 45.66.35.21;
 allow 45.66.35.35;
-allow 45.77.67.251;
 allow 45.79.177.21;
 allow 45.79.50.161;
 allow 45.80.158.205;
@@ -1460,6 +1457,7 @@ allow 45.95.169.255;
 allow 45.95.169.99;
 allow 46.166.139.111;
 allow 46.182.21.248;
+allow 46.195.112.152;
 allow 46.226.164.14;
 allow 46.232.251.191;
 allow 46.234.47.105;
@@ -1487,7 +1485,7 @@ allow 51.89.138.51;
 allow 51.89.153.112;
 allow 5.196.8.113;
 allow 5.196.95.34;
-allow 52.1.149.209;
+allow 52.3.130.9;
 allow 5.255.100.219;
 allow 5.255.101.10;
 allow 5.255.101.131;
@@ -1632,7 +1630,6 @@ allow 91.132.144.59;
 allow 91.203.144.194;
 allow 91.203.5.115;
 allow 91.203.5.118;
-allow 91.206.26.26;
 allow 91.208.197.144;
 allow 91.208.75.153;
 allow 91.208.75.156;
