--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -213,7 +213,6 @@ deny 178.218.144.51;
 deny 178.218.144.99;
 deny 178.236.237.23;
 deny 178.236.247.122;
-deny 178.31.135.66;
 deny 179.43.128.16;
 deny 179.43.134.18;
 deny 179.43.159.194;
@@ -704,7 +703,6 @@ deny 2001:678:e3c::a;
 deny 2001:678:e3c::b;
 deny 2001:678:e3c::c;
 deny 2001:678:e3c::d;
-deny 2001:67c:2044:1905::26;
 deny 2001:67c:2608::1;
 deny 2001:67c:289c::20;
 deny 2001:67c:289c:2::234;
@@ -888,7 +886,7 @@ deny 2.58.95.45;
 deny 2.58.95.47;
 deny 2.58.95.53;
 deny 2.58.95.59;
-deny 2600:3c00:e000:4ee::2;
+deny 2600:3c00:e000:4ee::1;
 deny 2600:3c00::f03c:91ff:fe96:1cd9;
 deny 2600:3c03:e000:fa::2;
 deny 2602:2e5::104;
@@ -1162,6 +1160,7 @@ deny 2a06:1700:1::11;
 deny 2a06:1700:1:1a::1;
 deny 2a06:1700:1:2a::7;
 deny 2a06:1700:3:19::1;
+deny 2a06:1700:4:14::1;
 deny 2a06:d380:0:103::62;
 deny 2a06:d380:0:103::63;
 deny 2a06:e80:3000:1:bad:babe:ca11:911;
@@ -1388,7 +1387,6 @@ deny 37.252.255.135;
 deny 37.48.120.196;
 deny 37.48.120.64;
 deny 37.48.70.156;
-deny 38.242.239.62;
 deny 38.97.116.244;
 deny 45.128.232.102;
 deny 45.128.232.170;
@@ -1435,7 +1433,6 @@ deny 45.66.35.10;
 deny 45.66.35.20;
 deny 45.66.35.21;
 deny 45.66.35.35;
-deny 45.77.67.251;
 deny 45.79.177.21;
 deny 45.79.50.161;
 deny 45.80.158.205;
@@ -1460,6 +1457,7 @@ deny 45.95.169.255;
 deny 45.95.169.99;
 deny 46.166.139.111;
 deny 46.182.21.248;
+deny 46.195.112.152;
 deny 46.226.164.14;
 deny 46.232.251.191;
 deny 46.234.47.105;
@@ -1487,7 +1485,7 @@ deny 51.89.138.51;
 deny 51.89.153.112;
 deny 5.196.8.113;
 deny 5.196.95.34;
-deny 52.1.149.209;
+deny 52.3.130.9;
 deny 5.255.100.219;
 deny 5.255.101.10;
 deny 5.255.101.131;
@@ -1632,7 +1630,6 @@ deny 91.132.144.59;
 deny 91.203.144.194;
 deny 91.203.5.115;
 deny 91.203.5.118;
-deny 91.206.26.26;
 deny 91.208.197.144;
 deny 91.208.75.153;
 deny 91.208.75.156;
